--- a/assets/minecraft/lang/fa_ir.json
+++ b/assets/minecraft/lang/fa_ir.json
@@ -46,7 +46,7 @@
     "entity.minecraft.mule": "\u00a77\u0642\u0627\u0637\u0631",
     "entity.minecraft.skeleton_horse": "\u00a77\u0627\u0633\u0628 \u0627\u0633\u06a9\u0644\u062a\u06cc",
     "entity.minecraft.villager": "\u00a77\u0631\u0648\u0633\u062a\u0627\u06cc\u06cc",
-    "entity.minecraft.villager.armorer": "\u00a77\u0632\u0631\u0627\u062f",
+    "entity.minecraft.villager.armorer": "\u00a77\u0632\u0631\u0647 \u0633\u0627\u0632",
     "entity.minecraft.villager.butcher": "\u00a77\u0642\u0635\u0627\u0628",
     "entity.minecraft.villager.cartographer": "\u00a77\u0646\u0642\u0634\u0647 \u062f\u0627\u0631",
     "entity.minecraft.villager.cleric": "\u00a77\u0631\u0648\u062d\u0627\u0646\u06cc",
@@ -55,8 +55,8 @@
     "entity.minecraft.villager.fletcher": "\u00a77\u062a\u06cc\u0631\u0633\u0627\u0632",
     "entity.minecraft.villager.leatherworker": "\u00a77\u062f\u0628\u0627\u063a",
     "entity.minecraft.villager.librarian": "\u00a77\u06a9\u062a\u0627\u0628\u062f\u0627\u0631",
-    "entity.minecraft.villager.mason": "\u00a77\u0645\u06cc\u0633\u0648\u0646",
-    "entity.minecraft.villager.nitwit": "\u00a77\u0648\u0633\u0648\u0627\u0633\u06cc",
+    "entity.minecraft.villager.mason": "\u00a77\u0633\u0646\u06af\u200c\u062a\u0631\u0627\u0634",
+    "entity.minecraft.villager.nitwit": "\u00a77\u0627\u062d\u0645\u0642 \u0645\u0646\u0632\u0648\u06cc",
     "entity.minecraft.villager.none": "\u00a77\u0631\u0648\u0633\u062a\u0627\u06cc\u06cc",
     "entity.minecraft.villager.shepherd": "\u00a77\u0686\u0648\u067e\u0627\u0646",
     "entity.minecraft.villager.toolsmith": "\u00a77\u0627\u0628\u0632\u0627\u0631\u0633\u0627\u0632",
