--- a/assets/minecraft/lang/gd_gb.json
+++ b/assets/minecraft/lang/gd_gb.json
@@ -65,17 +65,17 @@
     "entity.minecraft.zombie_horse": "\u00a77Corp-eich",
     "gui.advancements": "\u00a7fAdhartachaidhean",
     "itemGroup.brewing": "\u00a77Gr\u00f9daireachd",
-    "itemGroup.buildingBlocks": "\u00a77Blocaichean togail",
+    "itemGroup.buildingBlocks": "\u00a77Blocaichean togalach",
     "itemGroup.combat": "\u00a77C\u00f2mhrag",
     "itemGroup.decorations": "\u00a77Blocaichean sgeadachaidh",
     "itemGroup.food": "\u00a77Biadh",
-    "itemGroup.hotbar": "\u00a77A Sh\u00e0bhaladh Hotbars",
+    "itemGroup.hotbar": "\u00a77Grad-bh\u00e0raichean air an s\u00e0bhaladh",
     "itemGroup.inventory": "\u00a77Tasgadh na mairsinneachd",
     "itemGroup.materials": "\u00a77Stuthan",
     "itemGroup.misc": "\u00a77Measgaichte",
     "itemGroup.redstone": "\u00a77Redstone",
     "itemGroup.search": "\u00a77Lorg",
-    "itemGroup.tools": "\u00a77Acainnean",
+    "itemGroup.tools": "\u00a77Buill-acainn",
     "itemGroup.transportation": "\u00a77C\u00f2mhdhail",
     "merchant.level.1": "\u00a77\u00d9ranach",
     "merchant.level.2": "\u00a77Preantas",
