--- a/assets/minecraft/lang/nl_be.json
+++ b/assets/minecraft/lang/nl_be.json
@@ -25,7 +25,7 @@
     "container.chestDouble": "\u00a77Grote kist",
     "container.crafting": "\u00a77Vervaardiging",
     "container.creative": "\u00a77Voorwerpselectie",
-    "container.dispenser": "\u00a77Dispenser",
+    "container.dispenser": "\u00a77Uitwerper",
     "container.dropper": "\u00a77Dropper",
     "container.enchant": "\u00a77Betovering",
     "container.enderchest": "\u00a77Enderkist",
@@ -35,7 +35,7 @@
     "container.inventory": "\u00a77Inventaris",
     "container.lectern": "\u00a77Lezenaar",
     "container.loom": "\u00a77Weefgetouw",
-    "container.repair": "\u00a77Aambeeld",
+    "container.repair": "\u00a77Aanvil",
     "container.shulkerBox": "\u00a77Shulkerdoos",
     "container.smoker": "\u00a77Roker",
     "container.stonecutter": "\u00a77Steenhouwer",
