--- a/assets/minecraft/lang/oc_fr.json
+++ b/assets/minecraft/lang/oc_fr.json
@@ -63,10 +63,12 @@
     "itemGroup.combat": "\u00a77Combat",
     "itemGroup.decorations": "\u00a77Bl\u00f2cs de Decoracion",
     "itemGroup.food": "\u00a77Noiridura",
+    "itemGroup.hotbar": "\u00a77Barras rapidas salvagardadas",
     "itemGroup.inventory": "\u00a77Inventari del m\u00f2de subrevida",
     "itemGroup.materials": "\u00a77Materials",
+    "itemGroup.misc": "\u00a77Div\u00e8rses",
     "itemGroup.redstone": "\u00a77Redstone",
-    "itemGroup.search": "\u00a77Recercar d'Obj\u00e8ctes",
+    "itemGroup.search": "\u00a77Recercar",
     "itemGroup.tools": "\u00a77Aisinas",
     "itemGroup.transportation": "\u00a77Transp\u00f2rt",
     "merchant.level.1": "\u00a77Novici",
