--- a/assets/minecraft/lang/tlh_aa.json
+++ b/assets/minecraft/lang/tlh_aa.json
@@ -25,6 +25,7 @@
     "container.enderchest": "\u00a77vanwI' DerlIq",
     "container.furnace": "\u00a77vIncha'",
     "container.hopper": "\u00a77Doch SupwI'",
+    "container.inventory": "\u00a77'aplo'Daq",
     "container.repair": "\u00a77tI' 'ej pong",
     "container.upgrade": "\u00a77Upgrade luch",
     "entity.minecraft.chest_minecart": "\u00a77DerlIq ghajbogh tlhIlHal Duj",
