:globe_with_meridians: Update lang files

--- a/assets/minecraft/lang/brb.json
+++ b/assets/minecraft/lang/brb.json
@@ -69,7 +69,7 @@
     "itemGroup.combat": "\u00a77Gevecht",
     "itemGroup.decorations": "\u00a77Decoratieve blokken",
     "itemGroup.food": "\u00a77Voedsel",
-    "itemGroup.hotbar": "\u00a77Opgeslagen werkbalken",
+    "itemGroup.hotbar": "\u00a77Opgeslaoge werkballeke",
     "itemGroup.inventory": "\u00a77Inventaris",
     "itemGroup.materials": "\u00a77Materialen",
     "itemGroup.misc": "\u00a77Diversen",
@@ -77,7 +77,7 @@
     "itemGroup.search": "\u00a77Zoeken",
     "itemGroup.tools": "\u00a77Gereedschap",
     "itemGroup.transportation": "\u00a77Vervoer",
-    "merchant.level.1": "\u00a77Beginner",
+    "merchant.level.1": "\u00a77Begienner",
     "merchant.level.2": "\u00a77Leerling",
     "merchant.level.3": "\u00a77Dagloner",
     "merchant.level.4": "\u00a77Expert",
