--- a/assets/minecraft/lang/es_cl.json
+++ b/assets/minecraft/lang/es_cl.json
@@ -17,7 +17,7 @@
     "block.minecraft.white_shulker_box": "\u00a77Caja de shulker blanca",
     "block.minecraft.yellow_shulker_box": "\u00a77Caja de shulker amarilla",
     "container.barrel": "\u00a77Barril",
-    "container.beacon": "\u00a77Beacon",
+    "container.beacon": "\u00a77Faro",
     "container.blast_furnace": "\u00a77Alto horno",
     "container.brewing": "\u00a77Soporte para pociones",
     "container.cartography_table": "\u00a77Mesa de cartograf\u00eda",
