--- a/assets/minecraft/lang/fi_fi.json
+++ b/assets/minecraft/lang/fi_fi.json
@@ -73,7 +73,7 @@
     "itemGroup.inventory": "\u00a77Tavaraluettelo",
     "itemGroup.materials": "\u00a77Materiaalit",
     "itemGroup.misc": "\u00a77Sekalaiset",
-    "itemGroup.redstone": "\u00a77Punakivi",
+    "itemGroup.redstone": "\u00a77Redstone",
     "itemGroup.search": "\u00a77Etsi esineit\u00e4",
     "itemGroup.tools": "\u00a77Ty\u00f6kalut",
     "itemGroup.transportation": "\u00a77Kuljetus",
