--- a/assets/minecraft/lang/isv.json
+++ b/assets/minecraft/lang/isv.json
@@ -28,7 +28,7 @@
     "container.dispenser": "\u00a77Izkydatnik",
     "container.dropper": "\u00a77Izdava\u010d",
     "container.enchant": "\u00a77\u010cary",
-    "container.enderchest": "\u00a77Ender skladi\u0161\u010de",
+    "container.enderchest": "\u00a77Ender skrinja",
     "container.furnace": "\u00a77Pe\u010d",
     "container.grindstone_title": "\u00a77Poprava i izgubjenje \u010darov",
     "container.hopper": "\u00a77Nasypnik",
