--- a/assets/minecraft/lang/oc_fr.json
+++ b/assets/minecraft/lang/oc_fr.json
@@ -59,9 +59,9 @@
     "entity.minecraft.zombie_horse": "\u00a77Caval z\u00f2mbi",
     "gui.advancements": "\u00a7fProgr\u00e8sses",
     "itemGroup.brewing": "\u00a77Pocions",
-    "itemGroup.buildingBlocks": "\u00a77Bl\u00f2cs de Construccion",
+    "itemGroup.buildingBlocks": "\u00a77Bl\u00f2cs de construccion",
     "itemGroup.combat": "\u00a77Combat",
-    "itemGroup.decorations": "\u00a77Bl\u00f2cs de Decoracion",
+    "itemGroup.decorations": "\u00a77Bl\u00f2cs de decoracion",
     "itemGroup.food": "\u00a77Noiridura",
     "itemGroup.hotbar": "\u00a77Barras rapidas salvagardadas",
     "itemGroup.inventory": "\u00a77Inventari del m\u00f2de subrevida",
