--- a/assets/minecraft/lang/pt_pt.json
+++ b/assets/minecraft/lang/pt_pt.json
@@ -46,13 +46,13 @@
     "entity.minecraft.mule": "\u00a77Mula",
     "entity.minecraft.skeleton_horse": "\u00a77Cavalo-esqueleto",
     "entity.minecraft.villager": "\u00a77Alde\u00e3o",
-    "entity.minecraft.villager.armorer": "\u00a77Vendedor de armaduras",
+    "entity.minecraft.villager.armorer": "\u00a77Couraceiro",
     "entity.minecraft.villager.butcher": "\u00a77Talhante",
     "entity.minecraft.villager.cartographer": "\u00a77Cart\u00f3grafo",
     "entity.minecraft.villager.cleric": "\u00a77Cl\u00e9rigo",
     "entity.minecraft.villager.farmer": "\u00a77Agricultor",
     "entity.minecraft.villager.fisherman": "\u00a77Pescador",
-    "entity.minecraft.villager.fletcher": "\u00a77Vendedor de flechas",
+    "entity.minecraft.villager.fletcher": "\u00a77Flecheiro",
     "entity.minecraft.villager.leatherworker": "\u00a77Coureiro",
     "entity.minecraft.villager.librarian": "\u00a77Bibliotec\u00e1rio",
     "entity.minecraft.villager.mason": "\u00a77Pedreiro",
