--- a/assets/minecraft/lang/se_no.json
+++ b/assets/minecraft/lang/se_no.json
@@ -70,7 +70,7 @@
     "itemGroup.decorations": "\u00a77Hervenblohkat",
     "itemGroup.food": "\u00a77Biebmu",
     "itemGroup.hotbar": "\u00a77Vurkejuvvon reaidolinnj\u00e1t",
-    "itemGroup.inventory": "\u00a77Ie\u0161birgema d\u00e1vvirvuork\u00e1",
+    "itemGroup.inventory": "\u00a77Ceavzin D\u00e1vvirvuork\u00e1",
     "itemGroup.materials": "\u00a77Materi\u00e1lat",
     "itemGroup.misc": "\u00a77Ear\u00e1",
     "itemGroup.redstone": "\u00a77Redstone",
