--- a/assets/minecraft/lang/so_so.json
+++ b/assets/minecraft/lang/so_so.json
@@ -26,6 +26,7 @@
     "container.inventory": "\u00a77Inventory",
     "container.loom": "\u00a77Dhar",
     "container.smoker": "\u00a77Sigaarka",
+    "container.stonecutter": "\u00a77Qoraa",
     "container.upgrade": "\u00a77Qalabka kor u qaadista",
     "entity.minecraft.chest_minecart": "\u00a77Dhuffeys ku jiru Sanduuqa",
     "entity.minecraft.horse": "\u00a77Faras",
