--- a/assets/minecraft/lang/en_pt.json
+++ b/assets/minecraft/lang/en_pt.json
@@ -40,7 +40,7 @@
     "container.smoker": "\u00a77Galley Oven",
     "container.stonecutter": "\u00a77Pebble chopp'r",
     "container.upgrade": "\u00a77Strengthen Yer Gear",
-    "entity.minecraft.chest_minecart": "\u00a77Coffer in a landlubber's boat",
+    "entity.minecraft.chest_minecart": "\u00a77Coffer in a landlubbers' boat",
     "entity.minecraft.horse": "\u00a77Brumby",
     "entity.minecraft.llama": "\u00a77Spittin' sheep",
     "entity.minecraft.mule": "\u00a77Mule",
@@ -72,7 +72,7 @@
     "itemGroup.hotbar": "\u00a77Saved pockets for ya tools",
     "itemGroup.inventory": "\u00a77Swashbuckler Loot",
     "itemGroup.materials": "\u00a77Loot",
-    "itemGroup.misc": "\u00a77Others, matey",
+    "itemGroup.misc": "\u00a77Others",
     "itemGroup.redstone": "\u00a77Redstone",
     "itemGroup.search": "\u00a77Search loot",
     "itemGroup.tools": "\u00a77Handy objects",
