--- a/assets/minecraft/lang/li_li.json
+++ b/assets/minecraft/lang/li_li.json
@@ -1,28 +1,28 @@
 {
-    "block.minecraft.black_shulker_box": "\u00a77Zjwarte Shulker doeas",
-    "block.minecraft.blue_shulker_box": "\u00a77Blauwe Shulker doeas",
-    "block.minecraft.brown_shulker_box": "\u00a77Broene Shulker doeas",
-    "block.minecraft.cyan_shulker_box": "\u00a77Turquoise Shulker doeas",
-    "block.minecraft.gray_shulker_box": "\u00a77Gries Shulker Doeas",
-    "block.minecraft.green_shulker_box": "\u00a77Greune Shulker doeas",
-    "block.minecraft.light_blue_shulker_box": "\u00a77Licht blauwe Shulker doeas",
-    "block.minecraft.light_gray_shulker_box": "\u00a77Licht Grieze Shulker Doeas",
+    "block.minecraft.black_shulker_box": "\u00a77Zjwarte Shulkerdoeas",
+    "block.minecraft.blue_shulker_box": "\u00a77Blauwe Shulkerdoeas",
+    "block.minecraft.brown_shulker_box": "\u00a77Broene Shulkerdoeas",
+    "block.minecraft.cyan_shulker_box": "\u00a77Turquoise Shulkerdoeas",
+    "block.minecraft.gray_shulker_box": "\u00a77Grieze Shulkerdoeas",
+    "block.minecraft.green_shulker_box": "\u00a77Greune Shulkerdoeas",
+    "block.minecraft.light_blue_shulker_box": "\u00a77Leechblauwe Shulkerdoeas",
+    "block.minecraft.light_gray_shulker_box": "\u00a77Leechtgrieze Shulkerdoeas",
     "block.minecraft.lime_shulker_box": "\u00a77Limoengreune Shulkerdoes",
-    "block.minecraft.magenta_shulker_box": "\u00a77Magenta Shulker doeas",
-    "block.minecraft.orange_shulker_box": "\u00a77Oranje Shulker doeas",
-    "block.minecraft.pink_shulker_box": "\u00a77Roze Shulker doeas",
-    "block.minecraft.purple_shulker_box": "\u00a77Paarse Shulker doeas",
-    "block.minecraft.red_shulker_box": "\u00a77Roeje Shulker doeas",
-    "block.minecraft.shulker_box": "\u00a77Shulker doeas",
-    "block.minecraft.white_shulker_box": "\u00a77Witte Shulker doeas",
-    "block.minecraft.yellow_shulker_box": "\u00a77Gaele Shulker doeas",
+    "block.minecraft.magenta_shulker_box": "\u00a77Magenta Shulkerdoeas",
+    "block.minecraft.orange_shulker_box": "\u00a77Oranje Shulkerdoeas",
+    "block.minecraft.pink_shulker_box": "\u00a77Roze Shulkerdoeas",
+    "block.minecraft.purple_shulker_box": "\u00a77Paarse Shulkerdoeas",
+    "block.minecraft.red_shulker_box": "\u00a77Roeje Shulkerdoeas",
+    "block.minecraft.shulker_box": "\u00a77Shulkerdoeas",
+    "block.minecraft.white_shulker_box": "\u00a77Witte Shulkerdoeas",
+    "block.minecraft.yellow_shulker_box": "\u00a77Gaele Shulkerdoeas",
     "container.barrel": "\u00a77Vaat",
     "container.beacon": "\u00a77Baken",
     "container.blast_furnace": "\u00a77Hoegaove",
     "container.brewing": "\u00a77Brouwstandaard",
     "container.cartography_table": "\u00a77Kartografietaofel",
     "container.chest": "\u00a77Kis",
-    "container.chestDouble": "\u00a77Groate Kis",
+    "container.chestDouble": "\u00a77Groete kis",
     "container.crafting": "\u00a77Vervaardiging",
     "container.creative": "\u00a77Voorwerpselectie",
     "container.dispenser": "\u00a77Dispenser",
@@ -38,7 +38,7 @@
     "container.repair": "\u00a77Aambeeld",
     "container.shulkerBox": "\u00a77Shulkerdoes",
     "container.smoker": "\u00a77Rouker",
-    "container.stonecutter": "\u00a77Sjteinsjnieder",
+    "container.stonecutter": "\u00a77Steinzaag",
     "container.upgrade": "\u00a77Upgrade oetrusting",
     "entity.minecraft.chest_minecart": "\u00a77Mienkar mit kis",
     "entity.minecraft.horse": "\u00a77Paerd",
