--- a/assets/minecraft/lang/lzh.json
+++ b/assets/minecraft/lang/lzh.json
@@ -39,7 +39,7 @@
     "container.shulkerBox": "\u00a77\u8d06\u6add",
     "container.smoker": "\u00a77\u71fb\u7210",
     "container.stonecutter": "\u00a77\u947f\u77f3\u5668",
-    "container.upgrade": "\u00a77\u512a\u7532\u80c4",
+    "container.upgrade": "\u00a77\u6607\u7532\u80c4",
     "entity.minecraft.chest_minecart": "\u00a77\u7bb1\u7926\u8eca",
     "entity.minecraft.horse": "\u00a77\u99ac",
     "entity.minecraft.llama": "\u00a77\u7f8e\u6d32\u99dd",
@@ -67,13 +67,13 @@
     "itemGroup.brewing": "\u00a77\u7149\u85e5",
     "itemGroup.buildingBlocks": "\u00a77\u71df\u9020\u4e4b\u65b9",
     "itemGroup.combat": "\u00a77\u6230\u9b25",
-    "itemGroup.decorations": "\u00a77\u4fee\u98fe\u4e4b\u65b9",
+    "itemGroup.decorations": "\u00a77\u98fe\u7269",
     "itemGroup.food": "\u00a77\u98df",
     "itemGroup.hotbar": "\u00a77\u65e2\u5132\u6377\u69fd",
     "itemGroup.inventory": "\u00a77\u884c\u56ca",
     "itemGroup.materials": "\u00a77\u6750",
     "itemGroup.misc": "\u00a77\u96dc",
-    "itemGroup.redstone": "\u00a77\u8d6d\u77f3",
+    "itemGroup.redstone": "\u00a77\u7d05\u77f3",
     "itemGroup.search": "\u00a77\u5c0b\u7269",
     "itemGroup.tools": "\u00a77\u5177",
     "itemGroup.transportation": "\u00a77\u884c",
