--- a/assets/minecraft/lang/mn_mn.json
+++ b/assets/minecraft/lang/mn_mn.json
@@ -73,7 +73,7 @@
     "itemGroup.inventory": "\u00a77\u042d\u0434 \u0437\u04af\u0439\u043b\u0441",
     "itemGroup.materials": "\u00a77\u0422\u04af\u04af\u0445\u0438\u0439 \u044d\u0434",
     "itemGroup.misc": "\u00a77\u042d\u043b\u0434\u044d\u0432 \u044f\u043d\u0437\u044b\u043d",
-    "itemGroup.redstone": "\u00a77\u0423\u043b\u0430\u0430\u043d \u0447\u0443\u043b\u0443\u0443",
+    "itemGroup.redstone": "\u00a77\u0420\u0435\u0434\u0441\u0442\u043e\u0443\u043d",
     "itemGroup.search": "\u00a77\u042d\u0434 \u0437\u04af\u0439\u043b \u0445\u0430\u0439\u0445",
     "itemGroup.tools": "\u00a77\u0411\u0430\u0433\u0430\u0436",
     "itemGroup.transportation": "\u00a77\u0422\u044d\u044d\u0432\u044d\u0440",
