:globe_with_meridians: Update lang files

--- a/assets/minecraft/lang/br_fr.json
+++ b/assets/minecraft/lang/br_fr.json
@@ -52,12 +52,12 @@
     "entity.minecraft.villager.farmer": "\u00a77Labourer-douar",
     "entity.minecraft.villager.fisherman": "\u00a77Pesketaer",
     "entity.minecraft.villager.fletcher": "\u00a77Gwareger",
-    "entity.minecraft.villager.leatherworker": "\u00a77Labourer al l\u00ear",
+    "entity.minecraft.villager.leatherworker": "\u00a77Kivijer",
     "entity.minecraft.villager.librarian": "\u00a77Levraoueger",
     "entity.minecraft.villager.mason": "\u00a77Mason",
     "entity.minecraft.villager.nitwit": "\u00a77Morjin",
     "entity.minecraft.villager.none": "\u00a77K\u00eariadennad",
-    "entity.minecraft.villager.shepherd": "\u00a77Da\u00f1vaer",
+    "entity.minecraft.villager.shepherd": "\u00a77Maesaer",
     "entity.minecraft.villager.toolsmith": "\u00a77Gov ostilho\u00f9",
     "entity.minecraft.villager.weaponsmith": "\u00a77Gov armo\u00f9",
     "entity.minecraft.wandering_trader": "\u00a77Marc'hadour kantreer",
