--- a/assets/minecraft/lang/lmo.json
+++ b/assets/minecraft/lang/lmo.json
@@ -30,12 +30,12 @@
     "container.enchant": "\u00a77Instria",
     "container.enderchest": "\u00a77Baull del Bord",
     "container.furnace": "\u00a77Fornas",
-    "container.grindstone_title": "\u00a77Sgiusta su e desencanta",
+    "container.grindstone_title": "\u00a77Giusta e desencanta",
     "container.hopper": "\u00a77Tramoeugia",
     "container.inventory": "\u00a77Inventari",
     "container.lectern": "\u00a77Letorin",
     "container.loom": "\u00a77Telar",
-    "container.repair": "\u00a77Sgiusta e denomina",
+    "container.repair": "\u00a77Giusta e d\u00e0 un nom",
     "container.shulkerBox": "\u00a77Scatola de shulker",
     "container.smoker": "\u00a77Fumentador",
     "container.stonecutter": "\u00a77Taja-preje",
