--- a/assets/minecraft/lang/no_no.json
+++ b/assets/minecraft/lang/no_no.json
@@ -45,7 +45,7 @@
     "entity.minecraft.llama": "\u00a77Lama",
     "entity.minecraft.mule": "\u00a77Muldyr",
     "entity.minecraft.skeleton_horse": "\u00a77Skjeletthest",
-    "entity.minecraft.villager": "\u00a77Landsbyboer",
+    "entity.minecraft.villager": "\u00a77Bygding",
     "entity.minecraft.villager.armorer": "\u00a77Rustningssmed",
     "entity.minecraft.villager.butcher": "\u00a77Slakter",
     "entity.minecraft.villager.cartographer": "\u00a77Karttegner",
@@ -57,7 +57,7 @@
     "entity.minecraft.villager.librarian": "\u00a77Bibliotekar",
     "entity.minecraft.villager.mason": "\u00a77Murer",
     "entity.minecraft.villager.nitwit": "\u00a77T\u00e5pe",
-    "entity.minecraft.villager.none": "\u00a77Landsbyboer",
+    "entity.minecraft.villager.none": "\u00a77Bygding",
     "entity.minecraft.villager.shepherd": "\u00a77Gjeter",
     "entity.minecraft.villager.toolsmith": "\u00a77Verkt\u00f8ysmed",
     "entity.minecraft.villager.weaponsmith": "\u00a77V\u00e5pensmed",
