--- a/assets/minecraft/lang/sxu.json
+++ b/assets/minecraft/lang/sxu.json
@@ -1,21 +1,21 @@
 {
-    "block.minecraft.black_shulker_box": "\u00a77Schworze Shulkergissde",
-    "block.minecraft.blue_shulker_box": "\u00a77Blaue Shulkergissde",
-    "block.minecraft.brown_shulker_box": "\u00a77Braune Shulkergissde",
-    "block.minecraft.cyan_shulker_box": "\u00a77D\u00fcrgise Shulkergissde",
-    "block.minecraft.gray_shulker_box": "\u00a77Graue Shulkergissde",
-    "block.minecraft.green_shulker_box": "\u00a77Griene Shulkergissde",
-    "block.minecraft.light_blue_shulker_box": "\u00a77Hellblaue Shulkergissde",
-    "block.minecraft.light_gray_shulker_box": "\u00a77Hellgraue Shulkergissde",
-    "block.minecraft.lime_shulker_box": "\u00a77Hellgriene Shulkergissde",
-    "block.minecraft.magenta_shulker_box": "\u00a77Magenda Shulkergissde",
-    "block.minecraft.orange_shulker_box": "\u00a77Orangschne Shulkergissde",
-    "block.minecraft.pink_shulker_box": "\u00a77Pinge Shulkergissde",
-    "block.minecraft.purple_shulker_box": "\u00a77Lila Shulkergissde",
-    "block.minecraft.red_shulker_box": "\u00a77Rode Shulkergissde",
-    "block.minecraft.shulker_box": "\u00a77Shulkergissde",
-    "block.minecraft.white_shulker_box": "\u00a77Wee\u00dfe Shulkergissde",
-    "block.minecraft.yellow_shulker_box": "\u00a77Gelbe Shulkergissde",
+    "block.minecraft.black_shulker_box": "\u00a77Schworze Shulker-Gissde",
+    "block.minecraft.blue_shulker_box": "\u00a77Blaue Shulker-Gissde",
+    "block.minecraft.brown_shulker_box": "\u00a77Braune Shulker-Gissde",
+    "block.minecraft.cyan_shulker_box": "\u00a77D\u00fcrgise Shulker-Gissde",
+    "block.minecraft.gray_shulker_box": "\u00a77Graue Shulker-Gissde",
+    "block.minecraft.green_shulker_box": "\u00a77Griene Shulker-Gissde",
+    "block.minecraft.light_blue_shulker_box": "\u00a77Hellblaue Shulker-Gissde",
+    "block.minecraft.light_gray_shulker_box": "\u00a77Hellgraue Shulker-Gissde",
+    "block.minecraft.lime_shulker_box": "\u00a77Hellgriene Shulker-Gissde",
+    "block.minecraft.magenta_shulker_box": "\u00a77Magenda Shulker-Gissde",
+    "block.minecraft.orange_shulker_box": "\u00a77Orangschne Shulker-Gissde",
+    "block.minecraft.pink_shulker_box": "\u00a77Pinge Shulker-Gissde",
+    "block.minecraft.purple_shulker_box": "\u00a77Lila Shulker-Gissde",
+    "block.minecraft.red_shulker_box": "\u00a77Rode Shulker-Gissde",
+    "block.minecraft.shulker_box": "\u00a77Shulker-Gissde",
+    "block.minecraft.white_shulker_box": "\u00a77Wee\u00dfe Shulker-Gissde",
+    "block.minecraft.yellow_shulker_box": "\u00a77Gelbe Shulker-Gissde",
     "container.barrel": "\u00a77Fass",
     "container.beacon": "\u00a77Leuschdfeuorr",
     "container.blast_furnace": "\u00a77Schmelzofn",
@@ -36,7 +36,7 @@
     "container.lectern": "\u00a77Lesebuld",
     "container.loom": "\u00a77W\u00e4bbschduhl",
     "container.repair": "\u00a77Reboriern & Benenn",
-    "container.shulkerBox": "\u00a77Shulkergissde",
+    "container.shulkerBox": "\u00a77Shulker-Gissde",
     "container.smoker": "\u00a77R\u00e4uschoroofn",
     "container.stonecutter": "\u00a77Schdeens\u00e4sche",
     "container.upgrade": "\u00a77Ausr\u00fcsdung uffw\u00e4rdn",
