--- a/assets/minecraft/lang/de_de.json
+++ b/assets/minecraft/lang/de_de.json
@@ -1,21 +1,21 @@
 {
-    "block.minecraft.black_shulker_box": "\u00a77Schwarze Shulkerkiste",
-    "block.minecraft.blue_shulker_box": "\u00a77Blaue Shulkerkiste",
-    "block.minecraft.brown_shulker_box": "\u00a77Braune Shulkerkiste",
-    "block.minecraft.cyan_shulker_box": "\u00a77T\u00fcrkise Shulkerkiste",
-    "block.minecraft.gray_shulker_box": "\u00a77Graue Shulkerkiste",
-    "block.minecraft.green_shulker_box": "\u00a77Gr\u00fcne Shulkerkiste",
-    "block.minecraft.light_blue_shulker_box": "\u00a77Hellblaue Shulkerkiste",
-    "block.minecraft.light_gray_shulker_box": "\u00a77Hellgraue Shulkerkiste",
-    "block.minecraft.lime_shulker_box": "\u00a77Hellgr\u00fcne Shulkerkiste",
-    "block.minecraft.magenta_shulker_box": "\u00a77Magenta Shulkerkiste",
-    "block.minecraft.orange_shulker_box": "\u00a77Orange Shulkerkiste",
-    "block.minecraft.pink_shulker_box": "\u00a77Rosa Shulkerkiste",
-    "block.minecraft.purple_shulker_box": "\u00a77Violette Shulkerkiste",
-    "block.minecraft.red_shulker_box": "\u00a77Rote Shulkerkiste",
-    "block.minecraft.shulker_box": "\u00a77Shulkerkiste",
-    "block.minecraft.white_shulker_box": "\u00a77Wei\u00dfe Shulkerkiste",
-    "block.minecraft.yellow_shulker_box": "\u00a77Gelbe Shulkerkiste",
+    "block.minecraft.black_shulker_box": "\u00a77Schwarze Shulker-Kiste",
+    "block.minecraft.blue_shulker_box": "\u00a77Blaue Shulker-Kiste",
+    "block.minecraft.brown_shulker_box": "\u00a77Braune Shulker-Kiste",
+    "block.minecraft.cyan_shulker_box": "\u00a77T\u00fcrkise Shulker-Kiste",
+    "block.minecraft.gray_shulker_box": "\u00a77Graue Shulker-Kiste",
+    "block.minecraft.green_shulker_box": "\u00a77Gr\u00fcne Shulker-Kiste",
+    "block.minecraft.light_blue_shulker_box": "\u00a77Hellblaue Shulker-Kiste",
+    "block.minecraft.light_gray_shulker_box": "\u00a77Hellgraue Shulker-Kiste",
+    "block.minecraft.lime_shulker_box": "\u00a77Hellgr\u00fcne Shulker-Kiste",
+    "block.minecraft.magenta_shulker_box": "\u00a77Magenta Shulker-Kiste",
+    "block.minecraft.orange_shulker_box": "\u00a77Orange Shulker-Kiste",
+    "block.minecraft.pink_shulker_box": "\u00a77Rosa Shulker-Kiste",
+    "block.minecraft.purple_shulker_box": "\u00a77Violette Shulker-Kiste",
+    "block.minecraft.red_shulker_box": "\u00a77Rote Shulker-Kiste",
+    "block.minecraft.shulker_box": "\u00a77Shulker-Kiste",
+    "block.minecraft.white_shulker_box": "\u00a77Wei\u00dfe Shulker-Kiste",
+    "block.minecraft.yellow_shulker_box": "\u00a77Gelbe Shulker-Kiste",
     "container.barrel": "\u00a77Fass",
     "container.beacon": "\u00a77Leuchtfeuer",
     "container.blast_furnace": "\u00a77Schmelzofen",
@@ -36,7 +36,7 @@
     "container.lectern": "\u00a77Lesepult",
     "container.loom": "\u00a77Webstuhl",
     "container.repair": "\u00a77Reparieren & Benennen",
-    "container.shulkerBox": "\u00a77Shulkerkiste",
+    "container.shulkerBox": "\u00a77Shulker-Kiste",
     "container.smoker": "\u00a77R\u00e4ucherofen",
     "container.stonecutter": "\u00a77Steins\u00e4ge",
     "container.upgrade": "\u00a77Ausr\u00fcstung aufwerten",
