--- a/assets/minecraft/lang/en_pt.json
+++ b/assets/minecraft/lang/en_pt.json
@@ -17,7 +17,7 @@
     "block.minecraft.white_shulker_box": "\u00a77White shulker box",
     "block.minecraft.yellow_shulker_box": "\u00a77Yellow shulker box",
     "container.barrel": "\u00a77Barrrel",
-    "container.beacon": "\u00a77Buoy o' Light",
+    "container.beacon": "\u00a77Buoy o' light",
     "container.blast_furnace": "\u00a77Blast Oven",
     "container.brewing": "\u00a77Rum Barrel",
     "container.cartography_table": "\u00a77Cap'n's Mappin' Desk",
@@ -40,7 +40,7 @@
     "container.smoker": "\u00a77Galley Oven",
     "container.stonecutter": "\u00a77Pebble chopp'r",
     "container.upgrade": "\u00a77Strengthen Yer Gear",
-    "entity.minecraft.chest_minecart": "\u00a77Coffer in a landlubbers' boat",
+    "entity.minecraft.chest_minecart": "\u00a77Coffer in a landlubber's boat",
     "entity.minecraft.horse": "\u00a77Brumby",
     "entity.minecraft.llama": "\u00a77Spittin' sheep",
     "entity.minecraft.mule": "\u00a77Mule",
