--- a/assets/minecraft/lang/fa_ir.json
+++ b/assets/minecraft/lang/fa_ir.json
@@ -29,7 +29,7 @@
     "container.dropper": "\u00a77\u067e\u0631\u062a\u0627\u0628\u06af\u0631",
     "container.enchant": "\u00a77\u0627\u0641\u0633\u0648\u0646",
     "container.enderchest": "\u00a77\u0635\u0646\u062f\u0648\u0642 \u0627\u0646\u062f",
-    "container.furnace": "\u00a77\u06a9\u0648\u0631\u0647",
+    "container.furnace": "\u00a77\u0627\u062c\u0627\u0642",
     "container.grindstone_title": "\u00a77\u062a\u0639\u0645\u06cc\u0631 \u0648 \u0627\u0632 \u0628\u06cc\u0646 \u0628\u0631\u062f\u0646 \u062c\u0627\u062f\u0648",
     "container.hopper": "\u00a77\u0642\u064a\u0641",
     "container.inventory": "\u00a77\u06a9\u0648\u0644\u0647 \u067e\u0634\u062a\u06cc",
