--- a/assets/minecraft/lang/fy_nl.json
+++ b/assets/minecraft/lang/fy_nl.json
@@ -2,7 +2,7 @@
     "block.minecraft.black_shulker_box": "\u00a77Swarte Shulker-doaze",
     "block.minecraft.blue_shulker_box": "\u00a77Blauwe Shulker-doaze",
     "block.minecraft.brown_shulker_box": "\u00a77Brune Shulker-doaze",
-    "block.minecraft.cyan_shulker_box": "\u00a77Turquoise Shulker-doaze",
+    "block.minecraft.cyan_shulker_box": "\u00a77Syane Shulker-doaze",
     "block.minecraft.gray_shulker_box": "\u00a77Grize Shulker-doaze",
     "block.minecraft.green_shulker_box": "\u00a77Griene Shulker-doaze",
     "block.minecraft.light_blue_shulker_box": "\u00a77Ljochtblauwe Shulker-doaze",
@@ -39,7 +39,7 @@
     "container.shulkerBox": "\u00a77Shulker-doaze",
     "container.smoker": "\u00a77Smoker",
     "container.stonecutter": "\u00a77Stiensliper",
-    "container.upgrade": "\u00a77Gearwurkje Upgraden",
+    "container.upgrade": "\u00a77Utris opwurdearje",
     "entity.minecraft.chest_minecart": "\u00a77Mynkarre mei kiste",
     "entity.minecraft.horse": "\u00a77Hynder",
     "entity.minecraft.llama": "\u00a77Lama",
@@ -69,7 +69,7 @@
     "itemGroup.combat": "\u00a77Fjochtsje",
     "itemGroup.decorations": "\u00a77Dekorative blokken",
     "itemGroup.food": "\u00a77Iten",
-    "itemGroup.hotbar": "\u00a77Bewarre Hotbars",
+    "itemGroup.hotbar": "\u00a77Bewarre arkbalken",
     "itemGroup.inventory": "\u00a77Ynventaris",
     "itemGroup.materials": "\u00a77Materialen",
     "itemGroup.misc": "\u00a77Ferskaat",
