--- a/assets/minecraft/lang/oc_fr.json
+++ b/assets/minecraft/lang/oc_fr.json
@@ -5,7 +5,7 @@
     "block.minecraft.cyan_shulker_box": "\u00a77B\u00f3stia de Shulker cian",
     "block.minecraft.gray_shulker_box": "\u00a77B\u00f3stia de Shulker grisa",
     "block.minecraft.green_shulker_box": "\u00a77B\u00f3stia de Shulker verda",
-    "block.minecraft.light_blue_shulker_box": "\u00a77B\u00f3stia de Shulker blau clar",
+    "block.minecraft.light_blue_shulker_box": "\u00a77B\u00f3stia de shulker blau clar",
     "block.minecraft.light_gray_shulker_box": "\u00a77B\u00f3stia de Shulker gris clar",
     "block.minecraft.lime_shulker_box": "\u00a77B\u00f3stia de Shulker verd clar",
     "block.minecraft.magenta_shulker_box": "\u00a77B\u00f3stia de Shulker magenta",
@@ -39,33 +39,37 @@
     "container.smoker": "\u00a77Fumador",
     "container.stonecutter": "\u00a77Peiri\u00e8r",
     "entity.minecraft.chest_minecart": "\u00a77Vagonet amb c\u00f2fre",
-    "entity.minecraft.horse": "\u00a77Caval",
+    "entity.minecraft.horse": "\u00a77Cavau",
     "entity.minecraft.llama": "\u00a77Lama",
     "entity.minecraft.mule": "\u00a77Mula",
-    "entity.minecraft.skeleton_horse": "\u00a77Caval esquel\u00e8t",
+    "entity.minecraft.skeleton_horse": "\u00a77Cavau esqueleta",
     "entity.minecraft.villager": "\u00a77Vilatg\u00e9s",
     "entity.minecraft.villager.armorer": "\u00a77Armaduri\u00e8r",
-    "entity.minecraft.villager.butcher": "\u00a77Maseli\u00e8r",
-    "entity.minecraft.villager.cartographer": "\u00a77Cartograf",
-    "entity.minecraft.villager.cleric": "\u00a77Eclesiastic",
+    "entity.minecraft.villager.butcher": "\u00a77Boqui\u00e8r",
+    "entity.minecraft.villager.cartographer": "\u00a77Cartografe",
+    "entity.minecraft.villager.cleric": "\u00a77Clergue",
     "entity.minecraft.villager.farmer": "\u00a77Agricultor",
     "entity.minecraft.villager.fisherman": "\u00a77Pescaire",
-    "entity.minecraft.villager.fletcher": "\u00a77Vendeire de sagetas",
+    "entity.minecraft.villager.fletcher": "\u00a77Flechi\u00e8r",
     "entity.minecraft.villager.leatherworker": "\u00a77Curati\u00e8r",
-    "entity.minecraft.villager.librarian": "\u00a77Librari",
-    "entity.minecraft.villager.nitwit": "\u00a77Pi\u00f2t",
+    "entity.minecraft.villager.librarian": "\u00a77Bibliotecari",
+    "entity.minecraft.villager.mason": "\u00a77Ma\u00e7on",
+    "entity.minecraft.villager.nitwit": "\u00a77N\u00e8ci",
     "entity.minecraft.villager.none": "\u00a77Vilatg\u00e9s",
-    "entity.minecraft.villager.shepherd": "\u00a77Pastor",
-    "entity.minecraft.zombie_horse": "\u00a77Caval z\u00f2mbi",
+    "entity.minecraft.villager.shepherd": "\u00a77Pastre",
+    "entity.minecraft.villager.toolsmith": "\u00a77Faure d'aisinas",
+    "entity.minecraft.villager.weaponsmith": "\u00a77Faure d'armas",
+    "entity.minecraft.wandering_trader": "\u00a77Mercant ambulant",
+    "entity.minecraft.zombie_horse": "\u00a77Cavau z\u00f2mbi",
     "gui.advancements": "\u00a7fProgr\u00e8sses",
     "itemGroup.brewing": "\u00a77Pocions",
     "itemGroup.buildingBlocks": "\u00a77Bl\u00f2cs de construccion",
     "itemGroup.combat": "\u00a77Combat",
     "itemGroup.decorations": "\u00a77Bl\u00f2cs de decoracion",
     "itemGroup.food": "\u00a77Noiridura",
-    "itemGroup.hotbar": "\u00a77Barras rapidas salvagardadas",
-    "itemGroup.inventory": "\u00a77Inventari del m\u00f2de subrevida",
-    "itemGroup.materials": "\u00a77Materials",
+    "itemGroup.hotbar": "\u00a77Barras rapidas sauvagardadas",
+    "itemGroup.inventory": "\u00a77Inventari dau m\u00f2de subrevida",
+    "itemGroup.materials": "\u00a77Materiaus",
     "itemGroup.misc": "\u00a77Div\u00e8rses",
     "itemGroup.redstone": "\u00a77Redstone",
     "itemGroup.search": "\u00a77Recercar",
@@ -75,5 +79,6 @@
     "merchant.level.2": "\u00a77Aprend\u00eds",
     "merchant.level.3": "\u00a77Companhon",
     "merchant.level.4": "\u00a77Exp\u00e8rt",
-    "merchant.level.5": "\u00a77M\u00e8stre"
+    "merchant.level.5": "\u00a77M\u00e8stre",
+    "merchant.trades": "\u00a77Escambis"
 }
