:globe_with_meridians: Update lang files

--- a/assets/minecraft/lang/el_gr.json
+++ b/assets/minecraft/lang/el_gr.json
@@ -25,8 +25,8 @@
     "container.chestDouble": "\u00a77\u039c\u03b5\u03b3\u03ac\u03bb\u03bf \u03a3\u03b5\u03bd\u03c4\u03bf\u03cd\u03ba\u03b9",
     "container.crafting": "\u00a77\u039a\u03b1\u03c4\u03b1\u03c3\u03ba\u03b5\u03c5\u03ae",
     "container.creative": "\u00a77\u0395\u03c0\u03b9\u03bb\u03bf\u03b3\u03ae \u0391\u03bd\u03c4\u03b9\u03ba\u03b5\u03b9\u03bc\u03ad\u03bd\u03bf\u03c5",
-    "container.dispenser": "\u00a77\u0395\u03ba\u03c3\u03c6\u03b5\u03bd\u03b4\u03bf\u03bd\u03b9\u03c3\u03c4\u03ae\u03c2",
-    "container.dropper": "\u00a77\u0394\u03b9\u03b1\u03bd\u03bf\u03bc\u03ad\u03b1\u03c2",
+    "container.dispenser": "\u00a77\u0394\u03b9\u03b1\u03bd\u03bf\u03bc\u03ad\u03b1\u03c2",
+    "container.dropper": "\u00a77\u03a1\u03af\u03c7\u03c4\u03b7\u03c2",
     "container.enchant": "\u00a77\u039c\u03ac\u03b3\u03b5\u03bc\u03b1",
     "container.enderchest": "\u00a77\u03a3\u03b5\u03bd\u03c4\u03bf\u03cd\u03ba\u03b9 \u0388\u03bd\u03c4\u03b5\u03c1",
     "container.furnace": "\u00a77\u03a6\u03bf\u03cd\u03c1\u03bd\u03bf\u03c2",
@@ -40,7 +40,7 @@
     "container.smoker": "\u00a77\u039a\u03b1\u03c0\u03bd\u03b9\u03c3\u03c4\u03ae\u03c1\u03b9",
     "container.stonecutter": "\u00a77\u03a0\u03b5\u03c4\u03c1\u03bf\u03ba\u03cc\u03c0\u03c4\u03b7\u03c2",
     "container.upgrade": "\u00a77\u0391\u03bd\u03b1\u03b2\u03ac\u03b8\u03bc\u03b9\u03c3\u03b7",
-    "entity.minecraft.chest_minecart": "\u00a77\u0392\u03b1\u03b3\u03cc\u03bd\u03b9 \u03bc\u03b5 \u03a3\u03b5\u03bd\u03c4\u03bf\u03cd\u03ba\u03b9",
+    "entity.minecraft.chest_minecart": "\u00a77\u0392\u03b1\u03b3\u03bf\u03bd\u03ad\u03c4\u03bf \u03bc\u03b5 \u03a3\u03b5\u03bd\u03c4\u03bf\u03cd\u03ba\u03b9",
     "entity.minecraft.horse": "\u00a77\u0386\u03bb\u03bf\u03b3\u03bf",
     "entity.minecraft.llama": "\u00a77\u039b\u03ac\u03bc\u03b1",
     "entity.minecraft.mule": "\u00a77\u039c\u03bf\u03c5\u03bb\u03ac\u03c1\u03b9",
