--- a/assets/minecraft/lang/lmo.json
+++ b/assets/minecraft/lang/lmo.json
@@ -69,7 +69,7 @@
     "itemGroup.combat": "\u00a77Combatiment",
     "itemGroup.decorations": "\u00a77Bloch de decorazzion",
     "itemGroup.food": "\u00a77Mangi\u00e0",
-    "itemGroup.hotbar": "\u00a77Barre de scernida svelta salvade",
+    "itemGroup.hotbar": "\u00a77Barre svelte salvade",
     "itemGroup.inventory": "\u00a77Inventari de soravivenza",
     "itemGroup.materials": "\u00a77Materiai",
     "itemGroup.misc": "\u00a77Vari",
