--- a/assets/minecraft/lang/qya_aa.json
+++ b/assets/minecraft/lang/qya_aa.json
@@ -25,9 +25,12 @@
     "container.enchant": "\u00a77Luhta",
     "container.enderchest": "\u00a77Taucolca Endeva",
     "container.furnace": "\u00a77Urna",
+    "container.grindstone_title": "\u00a77Apterya ar \u00faluhta",
     "container.inventory": "\u00a77Auri\u00eb",
+    "container.lectern": "\u00a77Parmatarma",
     "container.repair": "\u00a77Envinyata ar esta",
     "container.shulkerBox": "\u00a77Colca hyulcero",
+    "container.smoker": "\u00a77Ustyar",
     "container.stonecutter": "\u00a77Ondocirma",
     "entity.minecraft.chest_minecart": "\u00a77Rax' as taucolca",
     "entity.minecraft.horse": "\u00a77Rocco",
@@ -50,7 +53,7 @@
     "entity.minecraft.villager.weaponsmith": "\u00a77Maicatan",
     "entity.minecraft.zombie_horse": "\u00a77Urcoya rocco",
     "gui.advancements": "\u00a7fEmpatyeller",
-    "itemGroup.brewing": "\u00a77\u00d3quantal\u00eb",
+    "itemGroup.brewing": "\u00a77Veli\u00eb",
     "itemGroup.buildingBlocks": "\u00a77Ronwar carastal\u00ebo",
     "itemGroup.combat": "\u00a77Mahti\u00eb",
     "itemGroup.decorations": "\u00a77Ronwar fintass\u00ebo",
