--- a/assets/minecraft/lang/tlh_aa.json
+++ b/assets/minecraft/lang/tlh_aa.json
@@ -1,24 +1,24 @@
 {
-    "block.minecraft.black_shulker_box": "\u00a77qIj",
-    "block.minecraft.blue_shulker_box": "\u00a77'ach pe'vIl Sep",
-    "block.minecraft.brown_shulker_box": "\u00a77pejqu",
-    "block.minecraft.cyan_shulker_box": "\u00a77qor'el",
-    "block.minecraft.gray_shulker_box": "\u00a77toQDuj",
-    "block.minecraft.green_shulker_box": "\u00a77ghe'wI",
-    "block.minecraft.light_blue_shulker_box": "\u00a77Say'moH",
-    "block.minecraft.light_gray_shulker_box": "\u00a77ghorqu'wI' pe'ghom",
-    "block.minecraft.lime_shulker_box": "\u00a77ghIlghameS",
-    "block.minecraft.magenta_shulker_box": "\u00a77mareQ",
-    "block.minecraft.orange_shulker_box": "\u00a77QI'yaH",
-    "block.minecraft.pink_shulker_box": "\u00a77'ay' wa'DIch",
-    "block.minecraft.purple_shulker_box": "\u00a77'ach ghortIq",
-    "block.minecraft.red_shulker_box": "\u00a77ghuy'cha'",
+    "block.minecraft.black_shulker_box": "\u00a77ghachwI' DerlIq qIj",
+    "block.minecraft.blue_shulker_box": "\u00a77SuDbogh \u2018ej Hurghbogh ghachwI' DerlIq",
+    "block.minecraft.brown_shulker_box": "\u00a77Doqbogh \u2018ej wovbe\u2019bogh ghachwI' DerlIq",
+    "block.minecraft.cyan_shulker_box": "\u00a77SuDbogh \u2019ej wovqu\u2019bogh ghachwI' DerlIq",
+    "block.minecraft.gray_shulker_box": "\u00a77qIjbogh 'ej wovbogh ghachwI' DerlIq",
+    "block.minecraft.green_shulker_box": "\u00a77ghachwI' DerlIq SuDqu\u2019",
+    "block.minecraft.light_blue_shulker_box": "\u00a77SuDbogh \u2018ej wovbogh ghachwI' DerlIq",
+    "block.minecraft.light_gray_shulker_box": "\u00a77qIjbogh \u2018ej wovqu\u2019bogh ghachwI' DerlIq",
+    "block.minecraft.lime_shulker_box": "\u00a77SuDqu\u2019bogh \u2018ej wovbogh ghachwI' DerlIq",
+    "block.minecraft.magenta_shulker_box": "\u00a77Doqqu\u2019bogh \u2018ej SuDbogh ghachwI' DerlIq",
+    "block.minecraft.orange_shulker_box": "\u00a77Doqbogh \u2018ej wovbogh ghachwI' DerlIq",
+    "block.minecraft.pink_shulker_box": "\u00a77Doqqu\u2019bogh \u2018ej wovbogh ghachwI' DerlIq",
+    "block.minecraft.purple_shulker_box": "\u00a77Doqbogh 'ej SuDbogh ghachwI' DerlIq",
+    "block.minecraft.red_shulker_box": "\u00a77ghachwI' DerlIq Doqqu'",
     "block.minecraft.shulker_box": "\u00a77ghachwI' DerlIq",
-    "block.minecraft.white_shulker_box": "\u00a77Huchvetlh",
-    "block.minecraft.yellow_shulker_box": "\u00a77Sey'Hut",
+    "block.minecraft.white_shulker_box": "\u00a77ghachwI' DerlIq chIS",
+    "block.minecraft.yellow_shulker_box": "\u00a77SuDbogh \u2018ej wovbogh ghachwI' DerlIq",
     "container.barrel": "\u00a77qegh",
     "container.beacon": "\u00a77rI'meH wovmoHwI'",
-    "container.blast_furnace": "\u00a77ngI'bogh vIncha'",
+    "container.blast_furnace": "\u00a77vIncha' tujqu'",
     "container.brewing": "\u00a77'IDnar taS qal'aq",
     "container.cartography_table": "\u00a77pu'jIn raS",
     "container.chest": "\u00a77DerlIq",
@@ -34,7 +34,7 @@
     "container.hopper": "\u00a77tomter",
     "container.inventory": "\u00a77'aplo'Daq",
     "container.lectern": "\u00a77paq raS",
-    "container.loom": "\u00a77nIq qal'aq",
+    "container.loom": "\u00a77nIqmeH qal'aq",
     "container.repair": "\u00a77tI' 'ej pong",
     "container.shulkerBox": "\u00a77ghachwI' DerlIq",
     "container.smoker": "\u00a77tlhIch vIncha'",
@@ -44,7 +44,7 @@
     "entity.minecraft.horse": "\u00a77Sargh",
     "entity.minecraft.llama": "\u00a77HuD bolmaq'a'",
     "entity.minecraft.mule": "\u00a77qu'vatlh",
-    "entity.minecraft.skeleton_horse": "\u00a77qal'aq Sargh",
+    "entity.minecraft.skeleton_horse": "\u00a77nobmeD Sargh",
     "entity.minecraft.villager": "\u00a77vengHom ghot",
     "entity.minecraft.villager.armorer": "\u00a77chenmoHwI' may' Sut",
     "entity.minecraft.villager.butcher": "\u00a77Ha'DIbaH HoHwI'",
@@ -52,7 +52,7 @@
     "entity.minecraft.villager.cleric": "\u00a77maqlegh",
     "entity.minecraft.villager.farmer": "\u00a77wIjwI'",
     "entity.minecraft.villager.fisherman": "\u00a77ghotI' wamwI'",
-    "entity.minecraft.villager.fletcher": "\u00a77bach chenmoHwI'",
+    "entity.minecraft.villager.fletcher": "\u00a77naQjejHom chenmoHwI'",
     "entity.minecraft.villager.leatherworker": "\u00a77qo'rIn DIr chenmoHwI'",
     "entity.minecraft.villager.librarian": "\u00a77De' QulwI'",
     "entity.minecraft.villager.mason": "\u00a77nagh chenmoHwI'",
@@ -72,6 +72,7 @@
     "itemGroup.hotbar": "\u00a77Hotbars pol",
     "itemGroup.inventory": "\u00a77taHmeH qengwI'",
     "itemGroup.materials": "\u00a77chenmoHmeH Hap",
+    "itemGroup.misc": "\u00a77Dochmey ngang",
     "itemGroup.redstone": "\u00a77nagh Doq",
     "itemGroup.search": "\u00a77DochmeyDaq nej",
     "itemGroup.tools": "\u00a77janmey",
