--- a/assets/minecraft/lang/brb.json
+++ b/assets/minecraft/lang/brb.json
@@ -19,50 +19,50 @@
     "container.barrel": "\u00a77Vat",
     "container.beacon": "\u00a77Baken",
     "container.blast_furnace": "\u00a77Ho\u00e8goove",
-    "container.brewing": "\u00a77Brouwstandaard",
-    "container.cartography_table": "\u00a77Kartografietafel",
-    "container.chest": "\u00a77Kist",
-    "container.chestDouble": "\u00a77Grote kist",
-    "container.crafting": "\u00a77In elkaar zetten",
-    "container.creative": "\u00a77Voorwerpselectie",
-    "container.dispenser": "\u00a77Dispenser",
+    "container.brewing": "\u00a77Braawstandaord",
+    "container.cartography_table": "\u00a77Kartograofietoafel",
+    "container.chest": "\u00a77Kiest",
+    "container.chestDouble": "\u00a77Groewte kiest",
+    "container.crafting": "\u00a77In mekaar zette",
+    "container.creative": "\u00a77Veurwerpseleksie",
+    "container.dispenser": "\u00a77Oitwerper",
     "container.dropper": "\u00a77Dropper",
-    "container.enchant": "\u00a77Betovering",
-    "container.enderchest": "\u00a77Enderkist",
-    "container.furnace": "\u00a77Oven",
-    "container.grindstone_title": "\u00a77Repareren & debetoveren",
+    "container.enchant": "\u00a77Beteuvering",
+    "container.enderchest": "\u00a77Enderkiest",
+    "container.furnace": "\u00a77Oove",
+    "container.grindstone_title": "\u00a77Repareren en debetovere",
     "container.hopper": "\u00a77Veurwerptrefter",
-    "container.inventory": "\u00a77Inventaris",
+    "container.inventory": "\u00a77Inventaoris",
     "container.lectern": "\u00a77Lessenaar",
     "container.loom": "\u00a77Weefgetouw",
-    "container.repair": "\u00a77Herstel & Hernoem",
-    "container.shulkerBox": "\u00a77Shulkerdoos",
+    "container.repair": "\u00a77Repareren en benoeme",
+    "container.shulkerBox": "\u00a77Shulkerdo\u00e2s",
     "container.smoker": "\u00a77Roker",
     "container.stonecutter": "\u00a77Stiensniejer",
-    "container.upgrade": "\u00a77U\u00fatrusting upgraden",
-    "entity.minecraft.chest_minecart": "\u00a77Mijnkar met kist",
-    "entity.minecraft.horse": "\u00a77P\u00e8rd",
+    "container.upgrade": "\u00a77Oitrusting upgraden",
+    "entity.minecraft.chest_minecart": "\u00a77Mijnkar meej kiest",
+    "entity.minecraft.horse": "\u00a77Perd",
     "entity.minecraft.llama": "\u00a77Lama",
-    "entity.minecraft.mule": "\u00a77Muilezel",
-    "entity.minecraft.skeleton_horse": "\u00a77Skeletp\u00e8rd",
-    "entity.minecraft.villager": "\u00a77Dorpeling",
+    "entity.minecraft.mule": "\u00a77Muuleezel",
+    "entity.minecraft.skeleton_horse": "\u00a77Skeletperd",
+    "entity.minecraft.villager": "\u00a77Turpeling",
     "entity.minecraft.villager.armorer": "\u00a77Harnassmid",
-    "entity.minecraft.villager.butcher": "\u00a77Slachter",
-    "entity.minecraft.villager.cartographer": "\u00a77Kartograaf",
-    "entity.minecraft.villager.cleric": "\u00a77Geestelijke",
+    "entity.minecraft.villager.butcher": "\u00a77Slager",
+    "entity.minecraft.villager.cartographer": "\u00a77Kartograof",
+    "entity.minecraft.villager.cleric": "\u00a77Geestel\u00e8ke",
     "entity.minecraft.villager.farmer": "\u00a77Boer",
     "entity.minecraft.villager.fisherman": "\u00a77Visser",
-    "entity.minecraft.villager.fletcher": "\u00a77Pijlenmaker",
-    "entity.minecraft.villager.leatherworker": "\u00a77Leerlooier",
+    "entity.minecraft.villager.fletcher": "\u00a77P\u00e8\u00e8lemoaker",
+    "entity.minecraft.villager.leatherworker": "\u00a77Lierlaojer",
     "entity.minecraft.villager.librarian": "\u00a77Bibliothecaris",
-    "entity.minecraft.villager.mason": "\u00a77Metselaar",
+    "entity.minecraft.villager.mason": "\u00a77Metselaor",
     "entity.minecraft.villager.nitwit": "\u00a77Onbenul",
-    "entity.minecraft.villager.none": "\u00a77Dorpeling",
+    "entity.minecraft.villager.none": "\u00a77Turpeling",
     "entity.minecraft.villager.shepherd": "\u00a77Herder",
-    "entity.minecraft.villager.toolsmith": "\u00a77Gereedschapssmid",
-    "entity.minecraft.villager.weaponsmith": "\u00a77Wapensmid",
-    "entity.minecraft.wandering_trader": "\u00a77Rondreizende handelaar",
-    "entity.minecraft.zombie_horse": "\u00a77Zombiep\u00e8rd",
+    "entity.minecraft.villager.toolsmith": "\u00a77Getuigssmed",
+    "entity.minecraft.villager.weaponsmith": "\u00a77Waopesmed",
+    "entity.minecraft.wandering_trader": "\u00a77Rondr\u00e8\u00e8zende handelaor",
+    "entity.minecraft.zombie_horse": "\u00a77Zombieperd",
     "gui.advancements": "\u00a7fVooruitgangen",
     "itemGroup.brewing": "\u00a77Brouwen",
     "itemGroup.buildingBlocks": "\u00a77Bouwblokken",
