--- a/assets/minecraft/lang/de_ch.json
+++ b/assets/minecraft/lang/de_ch.json
@@ -17,70 +17,70 @@
     "block.minecraft.white_shulker_box": "\u00a77Wissi Shulkerchischte",
     "block.minecraft.yellow_shulker_box": "\u00a77Gelbi Shulkerchischte",
     "container.barrel": "\u00a77Fass",
-    "container.beacon": "\u00a77L\u00fc\u00fcchtf\u00fc\u00fcr",
-    "container.blast_furnace": "\u00a77Hochofe",
+    "container.beacon": "\u00a77L\u00fcchtf\u00fc\u00fcr",
+    "container.blast_furnace": "\u00a77Schmelzofe",
     "container.brewing": "\u00a77Braustand",
     "container.cartography_table": "\u00a77Kartetisch",
-    "container.chest": "\u00a77Chischte",
-    "container.chestDouble": "\u00a77Grossi Chischte",
-    "container.crafting": "\u00a77Handwerch",
+    "container.chest": "\u00a77Chiste",
+    "container.chestDouble": "\u00a77Grossi Chiste",
+    "container.crafting": "\u00a77Handwerk",
     "container.creative": "\u00a77G\u00e4gest\u00e4nd",
-    "container.dispenser": "\u00a77W\u00e4rfer",
-    "container.dropper": "\u00a77Sp\u00e4nder",
-    "container.enchant": "\u00a77Verzaub\u00e4r\u00e4",
-    "container.enderchest": "\u00a77Enderchischte",
-    "container.furnace": "\u00a77Of\u00e4",
+    "container.dispenser": "\u00a77Werfer",
+    "container.dropper": "\u00a77Spender",
+    "container.enchant": "\u00a77Verzaubere",
+    "container.enderchest": "\u00a77Enderchiste",
+    "container.furnace": "\u00a77Ofe",
     "container.grindstone_title": "\u00a77Repariere & entzubere",
     "container.hopper": "\u00a77Trichter",
     "container.inventory": "\u00a77Inventar",
-    "container.lectern": "\u00a77L\u00e4sepult",
-    "container.loom": "\u00a77W\u00e4bestuehl",
-    "container.repair": "\u00a77Amboss",
+    "container.lectern": "\u00a77Lesepult",
+    "container.loom": "\u00a77W\u00e4bstuehl",
+    "container.repair": "\u00a77Repariere & Benenne",
     "container.shulkerBox": "\u00a77Shulkerchischte",
     "container.smoker": "\u00a77R\u00fccherofe",
     "container.stonecutter": "\u00a77Steis\u00e4gi",
-    "container.upgrade": "\u00a77R\u00fcstig ufwert\u00e4",
+    "container.upgrade": "\u00a77Usr\u00fcstig ufwerte",
     "entity.minecraft.chest_minecart": "\u00a77G\u00fceterlore",
-    "entity.minecraft.horse": "\u00a77Ross",
+    "entity.minecraft.horse": "\u00a77Pferd",
     "entity.minecraft.llama": "\u00a77Lama",
     "entity.minecraft.mule": "\u00a77Muultier",
-    "entity.minecraft.skeleton_horse": "\u00a77Skelettross",
+    "entity.minecraft.skeleton_horse": "\u00a77Skelettpferd",
     "entity.minecraft.villager": "\u00a77Dorfbewohner",
-    "entity.minecraft.villager.armorer": "\u00a77R\u00fcstigsschmied",
+    "entity.minecraft.villager.armorer": "\u00a77Panzermacher",
     "entity.minecraft.villager.butcher": "\u00a77Metzger",
     "entity.minecraft.villager.cartographer": "\u00a77Chartograf",
-    "entity.minecraft.villager.cleric": "\u00a77Geischtlich\u00e4",
+    "entity.minecraft.villager.cleric": "\u00a77Geistliche",
     "entity.minecraft.villager.farmer": "\u00a77Buur",
     "entity.minecraft.villager.fisherman": "\u00a77Fischer",
-    "entity.minecraft.villager.fletcher": "\u00a77Pfiilmacher",
+    "entity.minecraft.villager.fletcher": "\u00a77Pfilmacher",
     "entity.minecraft.villager.leatherworker": "\u00a77Gerber",
     "entity.minecraft.villager.librarian": "\u00a77Bibliothekar",
     "entity.minecraft.villager.mason": "\u00a77Murer",
-    "entity.minecraft.villager.nitwit": "\u00a77Gal\u00f6li",
+    "entity.minecraft.villager.nitwit": "\u00a77Nichtsnutz",
     "entity.minecraft.villager.none": "\u00a77Dorfbewohner",
     "entity.minecraft.villager.shepherd": "\u00a77Sch\u00f6fer",
-    "entity.minecraft.villager.toolsmith": "\u00a77Werkz\u00fcgschmied",
+    "entity.minecraft.villager.toolsmith": "\u00a77Grobschmied",
     "entity.minecraft.villager.weaponsmith": "\u00a77Waffeschmied",
     "entity.minecraft.wandering_trader": "\u00a77Fahrende H\u00e4ndler",
-    "entity.minecraft.zombie_horse": "\u00a77Zombieross",
+    "entity.minecraft.zombie_horse": "\u00a77Zombiepferd",
     "gui.advancements": "\u00a7fFortschritt",
-    "itemGroup.brewing": "\u00a77Brau\u00e4",
+    "itemGroup.brewing": "\u00a77Braue",
     "itemGroup.buildingBlocks": "\u00a77Baumaterial",
     "itemGroup.combat": "\u00a77Kampf",
     "itemGroup.decorations": "\u00a77Dekoration",
     "itemGroup.food": "\u00a77Nahrig",
-    "itemGroup.hotbar": "\u00a77Gschpiichriti Schn\u00e4llz\u00fcegriffsliischte",
+    "itemGroup.hotbar": "\u00a77Gspeicherti Schnellzuegriffsleiste",
     "itemGroup.inventory": "\u00a77Inventar",
-    "itemGroup.materials": "\u00a77Materiali\u00e4",
-    "itemGroup.misc": "\u00a77Verschiednigs",
+    "itemGroup.materials": "\u00a77Werkstoff",
+    "itemGroup.misc": "\u00a77Verschiedenes",
     "itemGroup.redstone": "\u00a77Redstone",
-    "itemGroup.search": "\u00a77Suech",
-    "itemGroup.tools": "\u00a77Werchz\u00fcg",
+    "itemGroup.search": "\u00a77Sueche",
+    "itemGroup.tools": "\u00a77Werkz\u00fcg",
     "itemGroup.transportation": "\u00a77Bef\u00f6rderig",
     "merchant.level.1": "\u00a77Neuling",
     "merchant.level.2": "\u00a77Lehrling",
     "merchant.level.3": "\u00a77Gsell",
     "merchant.level.4": "\u00a77Experte",
     "merchant.level.5": "\u00a77Meischter",
-    "merchant.trades": "\u00a77Agbote"
+    "merchant.trades": "\u00a77Agebot"
 }
