--- a/assets/minecraft/lang/fa_ir.json
+++ b/assets/minecraft/lang/fa_ir.json
@@ -63,7 +63,7 @@
     "entity.minecraft.villager.weaponsmith": "\u00a77\u0627\u0633\u0644\u062d\u0647 \u0633\u0627\u0632",
     "entity.minecraft.wandering_trader": "\u00a77\u0645\u0639\u0627\u0645\u0644\u0647 \u06af\u0631 \u0633\u0631\u06af\u0631\u062f\u0627\u0646",
     "entity.minecraft.zombie_horse": "\u00a77\u0627\u0633\u0628 \u0632\u0627\u0645\u0628\u06cc",
-    "gui.advancements": "\u00a7f\u067e\u06cc\u0634\u0631\u0648\u06cc \u0647\u0627",
+    "gui.advancements": "\u00a7f\u067e\u064a\u0634\u0631\u0648\u06cc \u0647\u0627",
     "itemGroup.brewing": "\u00a77\u0645\u0639\u062c\u0648\u0646 \u0633\u0627\u0632\u064a",
     "itemGroup.buildingBlocks": "\u00a77\u0628\u0644\u0648\u06a9 \u0647\u0627\u064a \u0633\u0627\u062e\u062a \u0648 \u0633\u0627\u0632",
     "itemGroup.combat": "\u00a77\u0645\u0628\u0627\u0631\u0632\u0647",
@@ -72,7 +72,7 @@
     "itemGroup.hotbar": "\u00a77\u0646\u0648\u0627\u0631 \u0627\u0628\u0632\u0627\u0631 \u0630\u062e\u06cc\u0631\u0647 \u0634\u062f\u0647",
     "itemGroup.inventory": "\u00a77\u06a9\u0648\u0644\u0647 \u06cc \u062d\u0627\u0644\u062a \u0628\u0642\u0627",
     "itemGroup.materials": "\u00a77\u0645\u0648\u0627\u062f \u0648 \u0645\u0635\u0627\u0644\u062d",
-    "itemGroup.misc": "\u00a77\u0633\u0627\u06cc\u0631 \u0645\u0648\u0627\u0631\u062f",
+    "itemGroup.misc": "\u00a77\u0633\u0627\u064a\u0631 \u0645\u0648\u0627\u0631\u062f",
     "itemGroup.redstone": "\u00a77\u0631\u0650\u062f\u0650\u0633\u062a\u0648\u0646",
     "itemGroup.search": "\u00a77\u062c\u0633\u062a\u062c\u0648",
     "itemGroup.tools": "\u00a77\u0627\u0628\u0632\u0627\u0631 \u0647\u0627",
