:globe_with_meridians: Update lang files

--- a/assets/minecraft/lang/ast_es.json
+++ b/assets/minecraft/lang/ast_es.json
@@ -72,7 +72,7 @@
     "itemGroup.materials": "\u00a77Materiales",
     "itemGroup.misc": "\u00a77Miscel\u00e1nea",
     "itemGroup.redstone": "\u00a77Redstone",
-    "itemGroup.search": "\u00a77Gueta",
+    "itemGroup.search": "\u00a77Busca:",
     "itemGroup.tools": "\u00a77Preseos",
     "itemGroup.transportation": "\u00a77Tresporte",
     "merchant.level.1": "\u00a77Novatu",
