--- a/assets/minecraft/lang/isv.json
+++ b/assets/minecraft/lang/isv.json
@@ -5,7 +5,7 @@
     "block.minecraft.cyan_shulker_box": "\u00a77Turkysova \u0161alkerova krabka",
     "block.minecraft.gray_shulker_box": "\u00a77Siva \u0161alkerova krabka",
     "block.minecraft.green_shulker_box": "\u00a77Zelena \u0161alkerova krabka",
-    "block.minecraft.light_blue_shulker_box": "\u00a77Jasnomodra \u0161alkerova skrinja",
+    "block.minecraft.light_blue_shulker_box": "\u00a77Sv\u011btlomodra \u0161alkerova skrinja",
     "block.minecraft.light_gray_shulker_box": "\u00a77Jasnosiva \u0161alkerova krabka",
     "block.minecraft.lime_shulker_box": "\u00a77Jasnozelena \u0161alkerova krabka",
     "block.minecraft.magenta_shulker_box": "\u00a77Purpurna \u0161alkerova krabka",
@@ -28,7 +28,7 @@
     "container.dispenser": "\u00a77Izkydatnik",
     "container.dropper": "\u00a77Izdava\u010d",
     "container.enchant": "\u00a77\u010cary",
-    "container.enderchest": "\u00a77Ender skladi\u0161\u010de",
+    "container.enderchest": "\u00a77Ender skrinja",
     "container.furnace": "\u00a77Pe\u010d",
     "container.grindstone_title": "\u00a77Poprava i izgubjenje \u010darov",
     "container.hopper": "\u00a77Nasypnik",
