--- a/assets/minecraft/lang/lzh.json
+++ b/assets/minecraft/lang/lzh.json
@@ -26,21 +26,21 @@
     "container.crafting": "\u00a77\u88fd",
     "container.creative": "\u00a77\u64c7\u7269",
     "container.dispenser": "\u00a77\u5c04\u68b0",
-    "container.dropper": "\u00a77\u64f2\u5668",
+    "container.dropper": "\u00a77\u64f2\u68b0",
     "container.enchant": "\u00a77\u6dec\u9748",
     "container.enderchest": "\u00a77\u7d42\u7707\u7bb1",
     "container.furnace": "\u00a77\u7210",
-    "container.grindstone_title": "\u00a77\u795b\u9748",
+    "container.grindstone_title": "\u00a77\u4fee\u8207\u795b",
     "container.hopper": "\u00a77\u6f0f\u6597",
     "container.inventory": "\u00a77\u884c\u56ca",
-    "container.lectern": "\u00a77\u8b1b\u81fa",
+    "container.lectern": "\u00a77\u66f8\u6aaf",
     "container.loom": "\u00a77\u6a5f\u677c",
     "container.repair": "\u00a77\u4fee\u8207\u540d",
     "container.shulkerBox": "\u00a77\u8d06\u6add",
-    "container.smoker": "\u00a77\u7159\u7210",
-    "container.stonecutter": "\u00a77\u51ff\u77f3\u5668",
-    "container.upgrade": "\u00a77\u512a\u80c4\u7532",
-    "entity.minecraft.chest_minecart": "\u00a77\u7bb1\u8eca",
+    "container.smoker": "\u00a77\u71fb\u7210",
+    "container.stonecutter": "\u00a77\u947f\u77f3\u5668",
+    "container.upgrade": "\u00a77\u6607\u7532\u80c4",
+    "entity.minecraft.chest_minecart": "\u00a77\u7bb1\u7926\u8eca",
     "entity.minecraft.horse": "\u00a77\u99ac",
     "entity.minecraft.llama": "\u00a77\u7f8e\u6d32\u99dd",
     "entity.minecraft.mule": "\u00a77\u9a3e",
@@ -67,13 +67,13 @@
     "itemGroup.brewing": "\u00a77\u7149\u85e5",
     "itemGroup.buildingBlocks": "\u00a77\u71df\u9020\u4e4b\u65b9",
     "itemGroup.combat": "\u00a77\u6230\u9b25",
-    "itemGroup.decorations": "\u00a77\u98fe",
+    "itemGroup.decorations": "\u00a77\u98fe\u7269",
     "itemGroup.food": "\u00a77\u98df",
-    "itemGroup.hotbar": "\u00a77\u65e2\u5132\u6377\u6b04",
+    "itemGroup.hotbar": "\u00a77\u65e2\u5132\u6377\u69fd",
     "itemGroup.inventory": "\u00a77\u884c\u56ca",
     "itemGroup.materials": "\u00a77\u6750",
     "itemGroup.misc": "\u00a77\u96dc",
-    "itemGroup.redstone": "\u00a77\u8d6d\u77f3",
+    "itemGroup.redstone": "\u00a77\u7d05\u77f3",
     "itemGroup.search": "\u00a77\u5c0b\u7269",
     "itemGroup.tools": "\u00a77\u5177",
     "itemGroup.transportation": "\u00a77\u884c",
