--- a/assets/minecraft/lang/nds_de.json
+++ b/assets/minecraft/lang/nds_de.json
@@ -1,21 +1,21 @@
 {
-    "block.minecraft.black_shulker_box": "\u00a77Swatte Shulkerkist",
-    "block.minecraft.blue_shulker_box": "\u00a77Blaoe Shulkerkist",
-    "block.minecraft.brown_shulker_box": "\u00a77Bruune Shulkerkist",
-    "block.minecraft.cyan_shulker_box": "\u00a77Blaogr\u00f6\u00f6ne Shulkerkist",
-    "block.minecraft.gray_shulker_box": "\u00a77Graoe Shulkerkist",
-    "block.minecraft.green_shulker_box": "\u00a77Gr\u00f6\u00f6ne Shulkerkist",
-    "block.minecraft.light_blue_shulker_box": "\u00a77Lechtblaoe Shulkerkist",
-    "block.minecraft.light_gray_shulker_box": "\u00a77Griese Shulkerkist",
-    "block.minecraft.lime_shulker_box": "\u00a77Lechtgr\u00f6\u00f6ne Shulkerkist",
-    "block.minecraft.magenta_shulker_box": "\u00a77Magenta Shulkerkist",
-    "block.minecraft.orange_shulker_box": "\u00a77Geelroote Shulkerkist",
-    "block.minecraft.pink_shulker_box": "\u00a77Fienroote Shulkerkist",
-    "block.minecraft.purple_shulker_box": "\u00a77Vigelette Shulkerkist",
-    "block.minecraft.red_shulker_box": "\u00a77Roote Shulkerkist",
-    "block.minecraft.shulker_box": "\u00a77Shulkerkist",
-    "block.minecraft.white_shulker_box": "\u00a77Witte Shulkerkist",
-    "block.minecraft.yellow_shulker_box": "\u00a77Geele Shulkerkist",
+    "block.minecraft.black_shulker_box": "\u00a77Swatte Shulker-Kist",
+    "block.minecraft.blue_shulker_box": "\u00a77Blaoe Shulker-Kist",
+    "block.minecraft.brown_shulker_box": "\u00a77Bruune Shulker-Kist",
+    "block.minecraft.cyan_shulker_box": "\u00a77Blaogr\u00f6\u00f6ne Shulker-Kist",
+    "block.minecraft.gray_shulker_box": "\u00a77Graoe Shulker-Kist",
+    "block.minecraft.green_shulker_box": "\u00a77Gr\u00f6\u00f6ne Shulker-Kist",
+    "block.minecraft.light_blue_shulker_box": "\u00a77Lechtblaoe Shulker-Kist",
+    "block.minecraft.light_gray_shulker_box": "\u00a77Griese Shulker-Kist",
+    "block.minecraft.lime_shulker_box": "\u00a77Lechtgr\u00f6\u00f6ne Shulker-Kist",
+    "block.minecraft.magenta_shulker_box": "\u00a77Magenta Shulker-Kist",
+    "block.minecraft.orange_shulker_box": "\u00a77Geelroote Shulker-Kist",
+    "block.minecraft.pink_shulker_box": "\u00a77Fienroote Shulker-Kist",
+    "block.minecraft.purple_shulker_box": "\u00a77Vigelette Shulker-Kist",
+    "block.minecraft.red_shulker_box": "\u00a77Roote Shulker-Kist",
+    "block.minecraft.shulker_box": "\u00a77Shulker-Kist",
+    "block.minecraft.white_shulker_box": "\u00a77Witte Shulker-Kist",
+    "block.minecraft.yellow_shulker_box": "\u00a77Geele Shulker-Kist",
     "container.barrel": "\u00a77Fatt",
     "container.beacon": "\u00a77L\u00f6chtf\u00fcer",
     "container.blast_furnace": "\u00a77Sm\u00f6ltaven",
@@ -30,13 +30,13 @@
     "container.enchant": "\u00a77Bet\u00f6vern",
     "container.enderchest": "\u00a77Endertruh",
     "container.furnace": "\u00a77Aven",
-    "container.grindstone_title": "\u00a77Utbetern un entwicken",
+    "container.grindstone_title": "\u00a77Pareeren & Entwicken",
     "container.hopper": "\u00a77Tr\u00e4chter",
     "container.inventory": "\u00a77Taske",
     "container.lectern": "\u00a77Leespult",
     "container.loom": "\u00a77Weevstohl",
-    "container.repair": "\u00a77B\u00f6ten & N\u00e4\u00f6men",
-    "container.shulkerBox": "\u00a77Shulkerkist",
+    "container.repair": "\u00a77Pareeren & Naamen",
+    "container.shulkerBox": "\u00a77Shulker-Kist",
     "container.smoker": "\u00a77R\u00f6kelaven",
     "container.stonecutter": "\u00a77Steensaag",
     "container.upgrade": "\u00a77Utr\u00fcstung opweerten",
