--- a/assets/minecraft/lang/sxu.json
+++ b/assets/minecraft/lang/sxu.json
@@ -1,45 +1,45 @@
 {
-    "block.minecraft.black_shulker_box": "\u00a77Schworze Shulkergissde",
-    "block.minecraft.blue_shulker_box": "\u00a77Blaue Shulkergissde",
-    "block.minecraft.brown_shulker_box": "\u00a77Braune Shulkergissde",
-    "block.minecraft.cyan_shulker_box": "\u00a77D\u00fcrgise Shulkergissde",
-    "block.minecraft.gray_shulker_box": "\u00a77Graue Shulkergissde",
-    "block.minecraft.green_shulker_box": "\u00a77Griene Shulkergissde",
-    "block.minecraft.light_blue_shulker_box": "\u00a77Hellblaue Shulkergissde",
-    "block.minecraft.light_gray_shulker_box": "\u00a77Hellgraue Shulkergissde",
-    "block.minecraft.lime_shulker_box": "\u00a77Hellgriene Shulkergissde",
-    "block.minecraft.magenta_shulker_box": "\u00a77Magenda Shulkergissde",
-    "block.minecraft.orange_shulker_box": "\u00a77Orangschne Shulkergissde",
-    "block.minecraft.pink_shulker_box": "\u00a77Pinge Shulkergissde",
-    "block.minecraft.purple_shulker_box": "\u00a77Lila Shulkergissde",
-    "block.minecraft.red_shulker_box": "\u00a77Rode Shulkergissde",
-    "block.minecraft.shulker_box": "\u00a77Shulkergissde",
-    "block.minecraft.white_shulker_box": "\u00a77Wee\u00dfe Shulkergissde",
-    "block.minecraft.yellow_shulker_box": "\u00a77Gelbe Shulkergissde",
+    "block.minecraft.black_shulker_box": "\u00a77Schworze Shulker-Gissde",
+    "block.minecraft.blue_shulker_box": "\u00a77Blaue Shulker-Gissde",
+    "block.minecraft.brown_shulker_box": "\u00a77Braune Shulker-Gissde",
+    "block.minecraft.cyan_shulker_box": "\u00a77D\u00fcrgise Shulker-Gissde",
+    "block.minecraft.gray_shulker_box": "\u00a77Graue Shulker-Gissde",
+    "block.minecraft.green_shulker_box": "\u00a77Griene Shulker-Gissde",
+    "block.minecraft.light_blue_shulker_box": "\u00a77Hellblaue Shulker-Gissde",
+    "block.minecraft.light_gray_shulker_box": "\u00a77Hellgraue Shulker-Gissde",
+    "block.minecraft.lime_shulker_box": "\u00a77Hellgriene Shulker-Gissde",
+    "block.minecraft.magenta_shulker_box": "\u00a77Magenda Shulker-Gissde",
+    "block.minecraft.orange_shulker_box": "\u00a77Orangschne Shulker-Gissde",
+    "block.minecraft.pink_shulker_box": "\u00a77Pinge Shulker-Gissde",
+    "block.minecraft.purple_shulker_box": "\u00a77Lila Shulker-Gissde",
+    "block.minecraft.red_shulker_box": "\u00a77Rode Shulker-Gissde",
+    "block.minecraft.shulker_box": "\u00a77Shulker-Gissde",
+    "block.minecraft.white_shulker_box": "\u00a77Wee\u00dfe Shulker-Gissde",
+    "block.minecraft.yellow_shulker_box": "\u00a77Gelbe Shulker-Gissde",
     "container.barrel": "\u00a77Fass",
-    "container.beacon": "\u00a77Leichtfeier",
-    "container.blast_furnace": "\u00a77Hochoofn",
+    "container.beacon": "\u00a77Leuschdfeuorr",
+    "container.blast_furnace": "\u00a77Schmelzofn",
     "container.brewing": "\u00a77Brauschdand",
-    "container.cartography_table": "\u00a77Kartnt\u00fcsch",
-    "container.chest": "\u00a77Gissde",
-    "container.chestDouble": "\u00a77Gro\u00dfe Gissde",
+    "container.cartography_table": "\u00a77Gardndisch",
+    "container.chest": "\u00a77Druhe",
+    "container.chestDouble": "\u00a77Gro\u00dfe Druhe",
     "container.crafting": "\u00a77Handwersch",
     "container.creative": "\u00a77Geschnschd\u00e4nde",
-    "container.dispenser": "\u00a77Werfor",
-    "container.dropper": "\u00a77Spendor",
-    "container.enchant": "\u00a77Vorzauborn",
-    "container.enderchest": "\u00a77Endergissde",
-    "container.furnace": "\u00a77Ofen",
-    "container.grindstone_title": "\u00a77Repariern und endzauborn",
+    "container.dispenser": "\u00a77Werforr",
+    "container.dropper": "\u00a77Schbendor",
+    "container.enchant": "\u00a77Vorrzauborrn",
+    "container.enderchest": "\u00a77Enderdruhe",
+    "container.furnace": "\u00a77Ofn",
+    "container.grindstone_title": "\u00a77Reboriern & Endzauborn",
     "container.hopper": "\u00a77Drischdor",
     "container.inventory": "\u00a77Invendar",
-    "container.lectern": "\u00a77Lesepuld",
-    "container.loom": "\u00a77W\u00e4bbschtuhl",
-    "container.repair": "\u00a77Ambuss",
-    "container.shulkerBox": "\u00a77Shulkergissde",
+    "container.lectern": "\u00a77Lesebuld",
+    "container.loom": "\u00a77W\u00e4bbschduhl",
+    "container.repair": "\u00a77Reboriern & Benenn",
+    "container.shulkerBox": "\u00a77Shulker-Gissde",
     "container.smoker": "\u00a77R\u00e4uschoroofn",
-    "container.stonecutter": "\u00a77Steins\u00e4che",
-    "container.upgrade": "\u00a77Ausr\u00fcstung offwerdn",
+    "container.stonecutter": "\u00a77Schdeens\u00e4sche",
+    "container.upgrade": "\u00a77Ausr\u00fcsdung uffw\u00e4rdn",
     "entity.minecraft.chest_minecart": "\u00a77G\u00fcdorlore",
     "entity.minecraft.horse": "\u00a77F\u00e4rd",
     "entity.minecraft.llama": "\u00a77Lama",
@@ -69,7 +69,7 @@
     "itemGroup.combat": "\u00a77Gambf",
     "itemGroup.decorations": "\u00a77Degoration",
     "itemGroup.food": "\u00a77Nahrung",
-    "itemGroup.hotbar": "\u00a77Geschbeischorde Schnellzugriffsleisdn",
+    "itemGroup.hotbar": "\u00a77Geschbeischorrde Schnellzugriffsleisdn",
     "itemGroup.inventory": "\u00a77Invendar",
     "itemGroup.materials": "\u00a77Wergschdoffe",
     "itemGroup.misc": "\u00a77Vorschiednes",
