--- a/assets/minecraft/lang/brb.json
+++ b/assets/minecraft/lang/brb.json
@@ -1,24 +1,24 @@
 {
-    "block.minecraft.black_shulker_box": "\u00a77Zwarte Shulkerdoos",
-    "block.minecraft.blue_shulker_box": "\u00a77Blauwe Shulkerdoos",
-    "block.minecraft.brown_shulker_box": "\u00a77Bruine Shulkerdoos",
-    "block.minecraft.cyan_shulker_box": "\u00a77Turquoise Shulkerdoos",
-    "block.minecraft.gray_shulker_box": "\u00a77Grijze Shulkerdoos",
-    "block.minecraft.green_shulker_box": "\u00a77Gruune Shulkerdoos",
-    "block.minecraft.light_blue_shulker_box": "\u00a77Lichtblauwe Shulkerdoos",
-    "block.minecraft.light_gray_shulker_box": "\u00a77Lichtgrijze Shulkerdoos",
-    "block.minecraft.lime_shulker_box": "\u00a77Lichtgroene Shulkerdoos",
-    "block.minecraft.magenta_shulker_box": "\u00a77Magenta Shulkerdoos",
-    "block.minecraft.orange_shulker_box": "\u00a77Oranje Shulkerdoos",
-    "block.minecraft.pink_shulker_box": "\u00a77Roze Shulkerdoos",
-    "block.minecraft.purple_shulker_box": "\u00a77P\u00e9\u00e9rse Shulkerdoos",
-    "block.minecraft.red_shulker_box": "\u00a77Rode Shulkerdoos",
-    "block.minecraft.shulker_box": "\u00a77Shulkerdoos",
-    "block.minecraft.white_shulker_box": "\u00a77Witte Shulkerdoos",
-    "block.minecraft.yellow_shulker_box": "\u00a77Gele Shulkerdoos",
+    "block.minecraft.black_shulker_box": "\u00a77Zwerte shulkerdo\u00e2s",
+    "block.minecraft.blue_shulker_box": "\u00a77Blaawe shulkerdo\u00e2s",
+    "block.minecraft.brown_shulker_box": "\u00a77Br\u00e8\u00f9ne shulkerdo\u00e2s",
+    "block.minecraft.cyan_shulker_box": "\u00a77Turquoise shulkerdo\u00e2s",
+    "block.minecraft.gray_shulker_box": "\u00a77Gr\u00e8\u00e8ze shulkerdo\u00e2s",
+    "block.minecraft.green_shulker_box": "\u00a77Gr\u00fane shulkerdo\u00e2s",
+    "block.minecraft.light_blue_shulker_box": "\u00a77Liechtblaawe shulkerdo\u00e2s",
+    "block.minecraft.light_gray_shulker_box": "\u00a77Liechtgr\u00e8\u00e8ze shulkerdo\u00e2s",
+    "block.minecraft.lime_shulker_box": "\u00a77Liechtgr\u00fane shulkerdo\u00e2s",
+    "block.minecraft.magenta_shulker_box": "\u00a77Magenta shulkerdo\u00e2s",
+    "block.minecraft.orange_shulker_box": "\u00a77Oranje shulkerdo\u00e2s",
+    "block.minecraft.pink_shulker_box": "\u00a77Raaze shulkerdo\u00e2s",
+    "block.minecraft.purple_shulker_box": "\u00a77P\u00e9\u00e9rse shulkerdo\u00e2s",
+    "block.minecraft.red_shulker_box": "\u00a77Rooie shulkerdo\u00e2s",
+    "block.minecraft.shulker_box": "\u00a77Shulkerdo\u00e2s",
+    "block.minecraft.white_shulker_box": "\u00a77Wiete shulkerdo\u00e2s",
+    "block.minecraft.yellow_shulker_box": "\u00a77Gele shulkerdo\u00e2s",
     "container.barrel": "\u00a77Vat",
     "container.beacon": "\u00a77Baken",
-    "container.blast_furnace": "\u00a77Hoogoven",
+    "container.blast_furnace": "\u00a77Ho\u00e8goove",
     "container.brewing": "\u00a77Brouwstandaard",
     "container.cartography_table": "\u00a77Kartografietafel",
     "container.chest": "\u00a77Kist",
@@ -31,17 +31,17 @@
     "container.enderchest": "\u00a77Enderkist",
     "container.furnace": "\u00a77Oven",
     "container.grindstone_title": "\u00a77Repareren & debetoveren",
-    "container.hopper": "\u00a77Voorwerptrechter",
+    "container.hopper": "\u00a77Veurwerptrefter",
     "container.inventory": "\u00a77Inventaris",
     "container.lectern": "\u00a77Lessenaar",
     "container.loom": "\u00a77Weefgetouw",
     "container.repair": "\u00a77Herstel & Hernoem",
     "container.shulkerBox": "\u00a77Shulkerdoos",
     "container.smoker": "\u00a77Roker",
-    "container.stonecutter": "\u00a77Steensnijder",
-    "container.upgrade": "\u00a77Uitrusting upgraden",
+    "container.stonecutter": "\u00a77Stiensniejer",
+    "container.upgrade": "\u00a77U\u00fatrusting upgraden",
     "entity.minecraft.chest_minecart": "\u00a77Mijnkar met kist",
-    "entity.minecraft.horse": "\u00a77Paard",
+    "entity.minecraft.horse": "\u00a77P\u00e8rd",
     "entity.minecraft.llama": "\u00a77Lama",
     "entity.minecraft.mule": "\u00a77Muilezel",
     "entity.minecraft.skeleton_horse": "\u00a77Skeletp\u00e8rd",
@@ -69,7 +69,7 @@
     "itemGroup.combat": "\u00a77Gevecht",
     "itemGroup.decorations": "\u00a77Decoratieve blokken",
     "itemGroup.food": "\u00a77Voedsel",
-    "itemGroup.hotbar": "\u00a77Opgeslagen werkbalken",
+    "itemGroup.hotbar": "\u00a77Opgeslaoge werkballeke",
     "itemGroup.inventory": "\u00a77Inventaris",
     "itemGroup.materials": "\u00a77Materialen",
     "itemGroup.misc": "\u00a77Diversen",
@@ -77,10 +77,10 @@
     "itemGroup.search": "\u00a77Zoeken",
     "itemGroup.tools": "\u00a77Gereedschap",
     "itemGroup.transportation": "\u00a77Vervoer",
-    "merchant.level.1": "\u00a77Beginner",
-    "merchant.level.2": "\u00a77Leerling",
+    "merchant.level.1": "\u00a77Begienner",
+    "merchant.level.2": "\u00a77Lierling",
     "merchant.level.3": "\u00a77Dagloner",
     "merchant.level.4": "\u00a77Expert",
-    "merchant.level.5": "\u00a77Meester",
-    "merchant.trades": "\u00a77Ruilopties"
+    "merchant.level.5": "\u00a77Mester",
+    "merchant.trades": "\u00a77Tuitelopties"
 }
