--- a/assets/minecraft/lang/en_pt.json
+++ b/assets/minecraft/lang/en_pt.json
@@ -17,7 +17,7 @@
     "block.minecraft.white_shulker_box": "\u00a77White shulker box",
     "block.minecraft.yellow_shulker_box": "\u00a77Yellow shulker box",
     "container.barrel": "\u00a77Barrrel",
-    "container.beacon": "\u00a77Buoy o' Light",
+    "container.beacon": "\u00a77Buoy o' light",
     "container.blast_furnace": "\u00a77Blast Oven",
     "container.brewing": "\u00a77Rum Barrel",
     "container.cartography_table": "\u00a77Cap'n's Mappin' Desk",
@@ -26,7 +26,7 @@
     "container.crafting": "\u00a77Craftin'",
     "container.creative": "\u00a77Set 'o' loot",
     "container.dispenser": "\u00a77Cannon",
-    "container.dropper": "\u00a77Broken Cannon",
+    "container.dropper": "\u00a77Broken cannon",
     "container.enchant": "\u00a77Cast Magic",
     "container.enderchest": "\u00a77Ender Coffer",
     "container.furnace": "\u00a77Oven",
@@ -34,11 +34,11 @@
     "container.hopper": "\u00a77Object Suckin' Device",
     "container.inventory": "\u00a77Loot bag",
     "container.lectern": "\u00a77Readin' Stand",
-    "container.loom": "\u00a77Sewin' Station",
+    "container.loom": "\u00a77Sewin' station",
     "container.repair": "\u00a77Repair 'n moniker",
     "container.shulkerBox": "\u00a77Shulker Box",
     "container.smoker": "\u00a77Galley Oven",
-    "container.stonecutter": "\u00a77Pebble Chopp'r",
+    "container.stonecutter": "\u00a77Pebble chopp'r",
     "container.upgrade": "\u00a77Strengthen Yer Gear",
     "entity.minecraft.chest_minecart": "\u00a77Coffer in a landlubber's boat",
     "entity.minecraft.horse": "\u00a77Brumby",
@@ -72,7 +72,7 @@
     "itemGroup.hotbar": "\u00a77Saved pockets for ya tools",
     "itemGroup.inventory": "\u00a77Swashbuckler Loot",
     "itemGroup.materials": "\u00a77Loot",
-    "itemGroup.misc": "\u00a77Others, matey",
+    "itemGroup.misc": "\u00a77Others",
     "itemGroup.redstone": "\u00a77Redstone",
     "itemGroup.search": "\u00a77Search loot",
     "itemGroup.tools": "\u00a77Handy objects",
