--- a/assets/minecraft/lang/gd_gb.json
+++ b/assets/minecraft/lang/gd_gb.json
@@ -3,43 +3,43 @@
     "block.minecraft.blue_shulker_box": "\u00a77Bogsa shulker gorm",
     "block.minecraft.brown_shulker_box": "\u00a77Bogsa shulker donn",
     "block.minecraft.cyan_shulker_box": "\u00a77Bogsa shulker saidhean",
-    "block.minecraft.gray_shulker_box": "\u00a77Bogsa shulker liath",
+    "block.minecraft.gray_shulker_box": "\u00a77Bogsa shulker glas",
     "block.minecraft.green_shulker_box": "\u00a77Bogsa shulker uaine",
-    "block.minecraft.light_blue_shulker_box": "\u00a77Bogsa shulker soilleir-ghorm",
-    "block.minecraft.light_gray_shulker_box": "\u00a77Bogsa shulker soilleir-liath",
-    "block.minecraft.lime_shulker_box": "\u00a77Bogsa shulker dath na liomaid",
-    "block.minecraft.magenta_shulker_box": "\u00a77Bogsa shulker magenta",
+    "block.minecraft.light_blue_shulker_box": "\u00a77Bogsa shulker b\u00e0n-ghorm",
+    "block.minecraft.light_gray_shulker_box": "\u00a77Bogsa shulker liath",
+    "block.minecraft.lime_shulker_box": "\u00a77Bogsa shulker b\u00e0n-uaine",
+    "block.minecraft.magenta_shulker_box": "\u00a77Bogsa shulker maid\u00e8anta",
     "block.minecraft.orange_shulker_box": "\u00a77Bogsa shulker orains",
-    "block.minecraft.pink_shulker_box": "\u00a77Bogsa shulker pinc",
+    "block.minecraft.pink_shulker_box": "\u00a77Bogsa shulker b\u00e0n-dearg",
     "block.minecraft.purple_shulker_box": "\u00a77Bogsa shulker purpaidh",
     "block.minecraft.red_shulker_box": "\u00a77Bogsa shulker dearg",
     "block.minecraft.shulker_box": "\u00a77Bogsa shulker",
     "block.minecraft.white_shulker_box": "\u00a77Bogsa shulker geal",
     "block.minecraft.yellow_shulker_box": "\u00a77Bogsa shulker buidhe",
     "container.barrel": "\u00a77Baraille",
-    "container.beacon": "\u00a77Teine-rabhaidh",
+    "container.beacon": "\u00a77Leus",
     "container.blast_furnace": "\u00a77F\u00f9irneis s\u00e8ididh",
     "container.brewing": "\u00a77Inneal-gr\u00f9daireachd",
-    "container.cartography_table": "\u00a77Cl\u00e0r cartografaidh",
+    "container.cartography_table": "\u00a77B\u00f2rd cairt-i\u00f9lachd",
     "container.chest": "\u00a77Ciste",
     "container.chestDouble": "\u00a77Ciste mh\u00f2r",
-    "container.crafting": "\u00a77Ce\u00e0rd",
+    "container.crafting": "\u00a77Obair-chi\u00f9ird",
     "container.creative": "\u00a77Taghadh nithean",
     "container.dispenser": "\u00a77Bloca tilgeil",
     "container.dropper": "\u00a77Bloca leigeil \u00e0s",
-    "container.enchant": "\u00a77Laigh geas air",
+    "container.enchant": "\u00a77Cuir fo gheasaibh",
     "container.enderchest": "\u00a77Ciste Ender",
     "container.furnace": "\u00a77F\u00f9irneis",
-    "container.grindstone_title": "\u00a77D\u00e8an c\u00e0radh & thoir air falbh enchant",
+    "container.grindstone_title": "\u00a77C\u00e0raich \u204a thoir bho gheasan",
     "container.hopper": "\u00a77Drabhailt nithean",
     "container.inventory": "\u00a77An tasgadh",
-    "container.lectern": "\u00a77Lectern",
-    "container.loom": "\u00a77Bheairt",
-    "container.repair": "\u00a77C\u00e0raich 's cuir ainm air",
+    "container.lectern": "\u00a77Leatran",
+    "container.loom": "\u00a77Beart-fhighe",
+    "container.repair": "\u00a77C\u00e0raich \u204a cuir ainm air",
     "container.shulkerBox": "\u00a77Bogsa shulker",
     "container.smoker": "\u00a77Smocair",
-    "container.stonecutter": "\u00a77Clach-chlach",
-    "container.upgrade": "\u00a77Upgrade Gear",
+    "container.stonecutter": "\u00a77Gearradair-cloiche",
+    "container.upgrade": "\u00a77\u00c0rdaich uidheamachd",
     "entity.minecraft.chest_minecart": "\u00a77Cairt-mh\u00e8innearachd le ciste",
     "entity.minecraft.horse": "\u00a77Each",
     "entity.minecraft.llama": "\u00a77Llama",
@@ -59,27 +59,27 @@
     "entity.minecraft.villager.nitwit": "\u00a77Amadan",
     "entity.minecraft.villager.none": "\u00a77Saoranach",
     "entity.minecraft.villager.shepherd": "\u00a77C\u00ecobair",
-    "entity.minecraft.villager.toolsmith": "\u00a77Inneal-inneal",
-    "entity.minecraft.villager.weaponsmith": "\u00a77Armachd",
-    "entity.minecraft.wandering_trader": "\u00a77Malairtiche crith",
+    "entity.minecraft.villager.toolsmith": "\u00a77Inneal-che\u00e0rd",
+    "entity.minecraft.villager.weaponsmith": "\u00a77Airm-che\u00e0rd",
+    "entity.minecraft.wandering_trader": "\u00a77Marsanta allabanach",
     "entity.minecraft.zombie_horse": "\u00a77Corp-eich",
     "gui.advancements": "\u00a7fAdhartachaidhean",
     "itemGroup.brewing": "\u00a77Gr\u00f9daireachd",
-    "itemGroup.buildingBlocks": "\u00a77Blocaichean togail",
+    "itemGroup.buildingBlocks": "\u00a77Blocaichean togalach",
     "itemGroup.combat": "\u00a77C\u00f2mhrag",
     "itemGroup.decorations": "\u00a77Blocaichean sgeadachaidh",
     "itemGroup.food": "\u00a77Biadh",
-    "itemGroup.hotbar": "\u00a77A Sh\u00e0bhaladh Hotbars",
+    "itemGroup.hotbar": "\u00a77Grad-bh\u00e0raichean air an s\u00e0bhaladh",
     "itemGroup.inventory": "\u00a77Tasgadh na mairsinneachd",
     "itemGroup.materials": "\u00a77Stuthan",
     "itemGroup.misc": "\u00a77Measgaichte",
     "itemGroup.redstone": "\u00a77Redstone",
     "itemGroup.search": "\u00a77Lorg",
-    "itemGroup.tools": "\u00a77Acainnean",
+    "itemGroup.tools": "\u00a77Buill-acainn",
     "itemGroup.transportation": "\u00a77C\u00f2mhdhail",
-    "merchant.level.1": "\u00a77\u00d9r-ionnsaiche",
-    "merchant.level.2": "\u00a77Fhoghlainneach",
-    "merchant.level.3": "\u00a77Fear-turais",
+    "merchant.level.1": "\u00a77\u00d9ranach",
+    "merchant.level.2": "\u00a77Preantas",
+    "merchant.level.3": "\u00a77L\u00e0n-fhear-ce\u00e0irde",
     "merchant.level.4": "\u00a77E\u00f2laiche",
     "merchant.level.5": "\u00a77Maighstir",
     "merchant.trades": "\u00a77Ci\u00f9ird"
