--- a/assets/minecraft/lang/hy_am.json
+++ b/assets/minecraft/lang/hy_am.json
@@ -25,7 +25,7 @@
     "container.chestDouble": "\u00a77\u0544\u0565\u056e \u0533\u0561\u0576\u0571\u0561\u0580\u056f\u0572",
     "container.crafting": "\u00a77\u054a\u0561\u057f\u0580\u0561\u057d\u057f\u0578\u0582\u0574",
     "container.creative": "\u00a77\u0531\u057c\u0561\u0580\u056f\u0561\u0575\u056b \u0538\u0576\u057f\u0580\u0578\u0582\u0574",
-    "container.dispenser": "\u00a77\u0532\u0561\u056a\u0561\u0576\u056b\u0579",
+    "container.dispenser": "\u00a77\u0532\u0561\u0577\u056d\u056b\u0579",
     "container.dropper": "\u00a77\u0531\u0580\u057f\u0561\u0576\u0565\u057f\u056b\u0579",
     "container.enchant": "\u00a77\u053f\u0561\u056d\u0561\u0580\u0564\u0561\u0576\u0584",
     "container.enderchest": "\u00a77\u0537\u0576\u0564\u0565\u0580\u056b \u0533\u0561\u0576\u0571\u0561\u0580\u056f\u0572",
@@ -65,15 +65,15 @@
     "entity.minecraft.zombie_horse": "\u00a77\u0536\u0578\u0574\u0562\u056b \u0541\u056b",
     "gui.advancements": "\u00a7f\u0531\u057c\u0561\u057b\u0568\u0576\u0569\u0561\u0581\u0576\u0565\u0580",
     "itemGroup.brewing": "\u00a77\u0534\u0565\u0572\u0578\u0580\u0561\u0575\u0584\u056b \u054a\u0561\u057f\u0580\u0561\u057d\u057f\u0578\u0582\u0574 ",
-    "itemGroup.buildingBlocks": "\u00a77\u0547\u056b\u0576\u0561\u0580\u0561\u0580\u0561\u056f\u0561\u0576 \u056f\u0561\u057a\u0561\u0576\u0576\u0565\u0580",
+    "itemGroup.buildingBlocks": "\u00a77\u0547\u056b\u0576\u0561\u0580\u0561\u0580\u0561\u056f\u0561\u0576 \u0562\u056c\u0578\u056f\u0576\u0565\u0580",
     "itemGroup.combat": "\u00a77\u0544\u0561\u0580\u057f",
-    "itemGroup.decorations": "\u00a77\u0536\u0561\u0580\u0564\u0561\u0580\u0574\u0561\u0576 \u056f\u0561\u057a\u0561\u0576\u0576\u0565\u0580",
+    "itemGroup.decorations": "\u00a77\u0536\u0561\u0580\u0564\u0561\u0580\u0574\u0561\u0576 \u0562\u056c\u0578\u056f\u0576\u0565\u0580",
     "itemGroup.food": "\u00a77\u054d\u0576\u0578\u0582\u0576\u0564",
     "itemGroup.hotbar": "\u00a77\u054a\u0561\u0570\u057e\u0561\u056e \u054f\u0561\u0584\u0563\u0578\u057f\u056b\u0576\u0565\u0580",
     "itemGroup.inventory": "\u00a77\u0533\u0578\u0575\u0561\u057f\u0587\u0574\u0561\u0576 \u054a\u0561\u0575\u0578\u0582\u057d\u0561\u056f",
     "itemGroup.materials": "\u00a77\u0546\u0575\u0578\u0582\u0569\u0565\u0580",
     "itemGroup.misc": "\u00a77\u054f\u0561\u0580\u0562\u0565\u0580",
-    "itemGroup.redstone": "\u00a77\u053f\u0561\u0580\u0574\u056b\u0580 \u0553\u0578\u0577\u056b",
+    "itemGroup.redstone": "\u00a77\u054c\u0565\u0564\u057d\u057f\u0578\u0582\u0576",
     "itemGroup.search": "\u00a77\u0548\u0580\u0578\u0576\u0578\u0582\u0574",
     "itemGroup.tools": "\u00a77\u0533\u0578\u0580\u056e\u056b\u0584\u0576\u0565\u0580",
     "itemGroup.transportation": "\u00a77\u054f\u0580\u0561\u0576\u057d\u057a\u0578\u0580\u057f\u0561\u0575\u056b\u0576 \u0574\u056b\u057b\u0578\u0581",
