--- a/assets/minecraft/lang/so_so.json
+++ b/assets/minecraft/lang/so_so.json
@@ -18,14 +18,26 @@
     "block.minecraft.yellow_shulker_box": "\u00a77Sanduuqa shalker jaalaha ah",
     "container.barrel": "\u00a77Foosto",
     "container.blast_furnace": "\u00a77foornada_qarxa",
+    "container.chest": "\u00a77Sanduq",
+    "container.chestDouble": "\u00a77Sanduq Wayn",
+    "container.enderchest": "\u00a77Ender Sanduq",
+    "container.furnace": "\u00a77Forno",
     "container.grindstone_title": "\u00a77Dayactir & Nadaafad",
     "container.inventory": "\u00a77Inventory",
     "container.loom": "\u00a77Dhar",
     "container.smoker": "\u00a77Sigaarka",
+    "container.stonecutter": "\u00a77Qoraa",
     "container.upgrade": "\u00a77Qalabka kor u qaadista",
+    "entity.minecraft.chest_minecart": "\u00a77Dhuffeys ku jiru Sanduuqa",
+    "entity.minecraft.horse": "\u00a77Faras",
+    "entity.minecraft.llama": "\u00a77Ari",
+    "entity.minecraft.mule": "\u00a77Baqal",
+    "entity.minecraft.villager.farmer": "\u00a77Beralay",
+    "entity.minecraft.villager.fisherman": "\u00a77Kaluumeysato",
     "entity.minecraft.villager.mason": "\u00a77Dhageysiga",
     "entity.minecraft.villager.toolsmith": "\u00a77Gawaarida",
     "entity.minecraft.villager.weaponsmith": "\u00a77Hubka",
+    "entity.minecraft.zombie_horse": "\u00a77Faras Zombie",
     "itemGroup.hotbar": "\u00a77Hotbars keysan\n",
     "merchant.level.1": "\u00a77Newbie",
     "merchant.level.2": "\u00a77Kaaliye",
