--- a/assets/minecraft/lang/th_th.json
+++ b/assets/minecraft/lang/th_th.json
@@ -16,14 +16,14 @@
     "block.minecraft.shulker_box": "\u00a77\u0e01\u0e25\u0e48\u0e2d\u0e07\u0e0a\u0e31\u0e25\u0e40\u0e01\u0e2d\u0e23\u0e4c",
     "block.minecraft.white_shulker_box": "\u00a77\u0e01\u0e25\u0e48\u0e2d\u0e07\u0e0a\u0e31\u0e25\u0e40\u0e01\u0e2d\u0e23\u0e4c\u0e2a\u0e35\u0e02\u0e32\u0e27",
     "block.minecraft.yellow_shulker_box": "\u00a77\u0e01\u0e25\u0e48\u0e2d\u0e07\u0e0a\u0e31\u0e25\u0e40\u0e01\u0e2d\u0e23\u0e4c\u0e2a\u0e35\u0e40\u0e2b\u0e25\u0e37\u0e2d\u0e07",
-    "container.barrel": "\u00a77\u0e1a\u0e32\u0e23\u0e4c\u0e40\u0e23\u0e25",
+    "container.barrel": "\u00a77\u0e16\u0e31\u0e07\u0e1a\u0e32\u0e23\u0e4c\u0e40\u0e23\u0e25",
     "container.beacon": "\u00a77\u0e14\u0e27\u0e07\u0e1b\u0e23\u0e30\u0e17\u0e35\u0e1b",
     "container.blast_furnace": "\u00a77\u0e40\u0e15\u0e32\u0e2b\u0e25\u0e2d\u0e21",
     "container.brewing": "\u00a77\u0e41\u0e17\u0e48\u0e19\u0e1b\u0e23\u0e38\u0e07\u0e22\u0e32",
     "container.cartography_table": "\u00a77\u0e42\u0e15\u0e4a\u0e30\u0e17\u0e33\u0e41\u0e1c\u0e19\u0e17\u0e35\u0e48",
     "container.chest": "\u00a77\u0e2b\u0e35\u0e1a",
     "container.chestDouble": "\u00a77\u0e2b\u0e35\u0e1a\u0e43\u0e2b\u0e0d\u0e48",
-    "container.crafting": "\u00a77\u0e01\u0e32\u0e23\u0e04\u0e23\u0e32\u0e1f\u0e15\u0e4c",
+    "container.crafting": "\u00a77\u0e07\u0e32\u0e19\u0e04\u0e23\u0e32\u0e1f\u0e15\u0e4c",
     "container.creative": "\u00a77\u0e40\u0e25\u0e37\u0e2d\u0e01\u0e44\u0e2d\u0e40\u0e17\u0e21",
     "container.dispenser": "\u00a77\u0e40\u0e04\u0e23\u0e37\u0e48\u0e2d\u0e07\u0e22\u0e34\u0e07",
     "container.dropper": "\u00a77\u0e40\u0e04\u0e23\u0e37\u0e48\u0e2d\u0e07\u0e14\u0e23\u0e2d\u0e1b",
@@ -34,7 +34,7 @@
     "container.hopper": "\u00a77\u0e17\u0e48\u0e2d\u0e2a\u0e48\u0e07\u0e44\u0e2d\u0e40\u0e17\u0e21",
     "container.inventory": "\u00a77\u0e0a\u0e48\u0e2d\u0e07\u0e40\u0e01\u0e47\u0e1a\u0e02\u0e2d\u0e07",
     "container.lectern": "\u00a77\u0e41\u0e17\u0e48\u0e19\u0e2d\u0e48\u0e32\u0e19\u0e2b\u0e19\u0e31\u0e07\u0e2a\u0e37\u0e2d",
-    "container.loom": "\u00a77\u0e01\u0e35\u0e48",
+    "container.loom": "\u00a77\u0e40\u0e04\u0e23\u0e37\u0e48\u0e2d\u0e07\u0e17\u0e2d\u0e1c\u0e49\u0e32",
     "container.repair": "\u00a77\u0e0b\u0e48\u0e2d\u0e21\u0e41\u0e0b\u0e21\u0e41\u0e25\u0e30\u0e0a\u0e37\u0e48\u0e2d",
     "container.shulkerBox": "\u00a77\u0e01\u0e25\u0e48\u0e2d\u0e07\u0e0a\u0e31\u0e25\u0e40\u0e01\u0e2d\u0e23\u0e4c",
     "container.smoker": "\u00a77\u0e40\u0e15\u0e32\u0e23\u0e21\u0e04\u0e27\u0e31\u0e19",
@@ -42,7 +42,7 @@
     "container.upgrade": "\u00a77\u0e22\u0e01\u0e23\u0e30\u0e14\u0e31\u0e1a\u0e2d\u0e38\u0e1b\u0e01\u0e23\u0e13\u0e4c",
     "entity.minecraft.chest_minecart": "\u00a77\u0e23\u0e16\u0e23\u0e32\u0e07\u0e1e\u0e23\u0e49\u0e2d\u0e21\u0e2b\u0e35\u0e1a",
     "entity.minecraft.horse": "\u00a77\u0e21\u0e49\u0e32",
-    "entity.minecraft.llama": "\u00a77\u0e25\u0e32\u0e21\u0e32",
+    "entity.minecraft.llama": "\u00a77\u0e25\u0e32\u0e21\u0e30",
     "entity.minecraft.mule": "\u00a77\u0e25\u0e48\u0e2d",
     "entity.minecraft.skeleton_horse": "\u00a77\u0e21\u0e49\u0e32\u0e42\u0e04\u0e23\u0e07\u0e01\u0e23\u0e30\u0e14\u0e39\u0e01",
     "entity.minecraft.villager": "\u00a77\u0e0a\u0e32\u0e27\u0e1a\u0e49\u0e32\u0e19",
@@ -50,7 +50,7 @@
     "entity.minecraft.villager.butcher": "\u00a77\u0e04\u0e19\u0e02\u0e32\u0e22\u0e40\u0e19\u0e37\u0e49\u0e2d",
     "entity.minecraft.villager.cartographer": "\u00a77\u0e19\u0e31\u0e01\u0e17\u0e33\u0e41\u0e1c\u0e19\u0e17\u0e35\u0e48",
     "entity.minecraft.villager.cleric": "\u00a77\u0e19\u0e31\u0e01\u0e1a\u0e27\u0e0a",
-    "entity.minecraft.villager.farmer": "\u00a77\u0e40\u0e01\u0e29\u0e15\u0e23\u0e01\u0e23",
+    "entity.minecraft.villager.farmer": "\u00a77\u0e0a\u0e32\u0e27\u0e19\u0e32",
     "entity.minecraft.villager.fisherman": "\u00a77\u0e0a\u0e32\u0e27\u0e1b\u0e23\u0e30\u0e21\u0e07",
     "entity.minecraft.villager.fletcher": "\u00a77\u0e04\u0e19\u0e02\u0e32\u0e22\u0e18\u0e19\u0e39",
     "entity.minecraft.villager.leatherworker": "\u00a77\u0e0a\u0e48\u0e32\u0e07\u0e17\u0e33\u0e2b\u0e19\u0e31\u0e07\u0e2a\u0e31\u0e15\u0e27\u0e4c",
@@ -62,7 +62,7 @@
     "entity.minecraft.villager.toolsmith": "\u00a77\u0e0a\u0e48\u0e32\u0e07\u0e40\u0e04\u0e23\u0e37\u0e48\u0e2d\u0e07\u0e21\u0e37\u0e2d",
     "entity.minecraft.villager.weaponsmith": "\u00a77\u0e0a\u0e48\u0e32\u0e07\u0e2d\u0e32\u0e27\u0e38\u0e18",
     "entity.minecraft.wandering_trader": "\u00a77\u0e1e\u0e48\u0e2d\u0e04\u0e49\u0e32\u0e40\u0e23\u0e48\u0e23\u0e48\u0e2d\u0e19",
-    "entity.minecraft.zombie_horse": "\u00a77\u0e21\u0e49\u0e32\u0e0b\u0e2d\u0e21\u0e1a\u0e35",
+    "entity.minecraft.zombie_horse": "\u00a77\u0e21\u0e49\u0e32\u0e0b\u0e2d\u0e21\u0e1a\u0e35\u0e49",
     "gui.advancements": "\u00a7f\u0e04\u0e27\u0e32\u0e21\u0e01\u0e49\u0e32\u0e27\u0e2b\u0e19\u0e49\u0e32",
     "itemGroup.brewing": "\u00a77\u0e01\u0e32\u0e23\u0e1b\u0e23\u0e38\u0e07\u0e22\u0e32",
     "itemGroup.buildingBlocks": "\u00a77\u0e1a\u0e25\u0e47\u0e2d\u0e01\u0e01\u0e48\u0e2d\u0e2a\u0e23\u0e49\u0e32\u0e07",
@@ -78,9 +78,9 @@
     "itemGroup.tools": "\u00a77\u0e40\u0e04\u0e23\u0e37\u0e48\u0e2d\u0e07\u0e21\u0e37\u0e2d",
     "itemGroup.transportation": "\u00a77\u0e01\u0e32\u0e23\u0e02\u0e19\u0e2a\u0e48\u0e07",
     "merchant.level.1": "\u00a77\u0e21\u0e37\u0e2d\u0e43\u0e2b\u0e21\u0e48",
-    "merchant.level.2": "\u00a77\u0e1d\u0e36\u0e01\u0e07\u0e32\u0e19",
+    "merchant.level.2": "\u00a77\u0e40\u0e14\u0e47\u0e01\u0e1d\u0e36\u0e01\u0e07\u0e32\u0e19",
     "merchant.level.3": "\u00a77\u0e1c\u0e39\u0e49\u0e0a\u0e33\u0e19\u0e32\u0e0d\u0e07\u0e32\u0e19",
     "merchant.level.4": "\u00a77\u0e1c\u0e39\u0e49\u0e40\u0e0a\u0e35\u0e48\u0e22\u0e27\u0e0a\u0e32\u0e0d",
-    "merchant.level.5": "\u00a77\u0e40\u0e08\u0e49\u0e32\u0e19\u0e32\u0e22",
+    "merchant.level.5": "\u00a77\u0e1b\u0e23\u0e21\u0e08\u0e32\u0e23\u0e22\u0e4c",
     "merchant.trades": "\u00a77\u0e01\u0e32\u0e23\u0e04\u0e49\u0e32\u0e02\u0e32\u0e22"
 }
